--- a/mod/thmod/localisation/english/astral_planes_l_english.yml
+++ b/mod/thmod/localisation/english/astral_planes_l_english.yml
@@ -349,13 +349,13 @@
  Guardianship: "Guardianship"
  Protectorate: "Protectorate"
  Stalwart_Legion: "Stalwart Legion"
- gov_dimensional_covenant: "Dimensional Covenant"
+ gov_dimensional_covenant: "พันธสัญญามิติ"
  gov_dimensional_covenant_desc: "This society is underpinned by a deep spiritual consciousness. Strict moral codes are in place to ensure the highest percentage of its people can confidently look forward to the afterlife."
  RT_DIMENSIONAL_COVENANT: "First Ascendant"
  Church_of_Otherworlds: "Church of Otherworlds"
  Astral_Fellowship: "Astral Fellowship"
- Dimensional_Commune: "Dimensional Commune"
- sm_dimensional_shrine: "Dimensional Shrine"
+ Dimensional_Commune: "คอมมูนมิติ"
+ sm_dimensional_shrine: "ศาลเจ้ามิติ"
  sm_dimensional_shrine_desc: "Outside the known universe there are pathways to other worlds, and places where those connections are subtly made. This is where we build the holiest of our temples.\n"
  sm_reloading_bay: "Reloading Bay"
  sm_reloading_bay_desc: "Reserves a significant portion of the Starbase for reloading our weapon components, and provides for extra defense platforms.\n"
@@ -375,15 +375,15 @@
  civic_tooltip_not_hyperspace_specialty: "ไม่มีพลเมือง ['concept_hyperspace_specialty_civics']"
  concept_hyperspace_specialty_civics: "Hyperspace Specialty"
  concept_hyperspace_specialty_civics_desc: "คุณสมบัติพลเมือง $concept_hyperspace_specialty_civics$ ประกอบด้วย \n- ['civic:civic_hyperspace_specialty']$NEW_LINE$- ['civic:civic_corporate_hyperspace_specialty']$NEW_LINE$- ['civic:civic_hive_hyperspace_specialty']$NEW_LINE$- ['civic:civic_machine_hyperspace_specialty']"
- civic_dimensional_worship: "บูชาข้ามมิติ"
+ civic_dimensional_worship: "บูชามิติ"
  civic_dimensional_worship_desc: "This society believes that a divine existence lies beyond the folds in space and time. Systems where instabilities are highest hold a sacred meaning to them as sites of both pilgrimage and research."
- civic_dimensional_worship_effects: "Allows to build a §Y$sm_dimensional_shrine$§! starbase building in systems containing a §Y$WORMHOLE$§!, an §Y$pc_rift_star$§!, an §Y$ASTRAL_RIFT$§!, an §Y$LGATE_GALACTIC$§! or a §Y$SHROUD_TUNNEL_GALACTIC$§!.\nEach §Y$sm_dimensional_shrine$§! provides §G+$@dimensional_shrine_unity_production$§! £unity£."
- civic_dimensional_worship_effects_additional: "- Chance for [ 'concept_astral_rift', $ASTRAL_RIFTS$ ] to appear in systems you control: §G+100%§!$NEW_LINE$§M- Rare technologies§! now appear at §Y1.1§! times the normal rate. This effect would change a §Y1%§! chance into a §Y1.1%§! chance."
- civic_corporate_dimensional_worship: "Dimensional Enterprise"
+ civic_dimensional_worship_effects: "สามารถสร้าง §Y$sm_dimensional_shrine$§! บนฐานอวกาศที่ตั้งอยู่ภายในระบบดาวที่มี §Y$WORMHOLE$§!, §Y$pc_rift_star$§!, §Y$ASTRAL_RIFT$§!, §Y$LGATE_GALACTIC$§! หรือ §Y$SHROUD_TUNNEL_GALACTIC$§!\nแต่ละ §Y$sm_dimensional_shrine$§! ให้ £unity£ §G+$@dimensional_shrine_unity_production$§!"
+ civic_dimensional_worship_effects_additional: "- โอกาสที่[ 'concept_astral_rift', $ASTRAL_RIFTS$ ]จะปรากฏในระบบดาวที่คุณควบคุม: §G+100%§!$NEW_LINE$§M- เทคโนโลยีหายาก§! โอกาส §Y1.1§! เท่าจากปกติ เอฟเฟกต์นี้จะเปลี่ยนโอกาสจาก §Y1%§! เป็น §Y1.1%§!"
+ civic_corporate_dimensional_worship: "บริษัทองค์กรมิติ"
  civic_corporate_dimensional_worship_desc: "$civic_dimensional_worship_desc$"
  civic_corporate_dimensional_worship_effects: "$civic_dimensional_worship_effects$"
  civic_tooltip_not_dimensional_worship: "ไม่มีพลเมือง ['concept_dimensional_worship_civics']"
- concept_dimensional_worship_civics: "Dimensional Worship"
+ concept_dimensional_worship_civics: "บูชามิติ"
  concept_dimensional_worship_civics_desc: "$concept_dimensional_worship_civics$ Group consist of \n- ['civic:civic_dimensional_worship']$NEW_LINE$- ['civic:civic_corporate_dimensional_worship']"
  civic_dark_consortium: "สมาคมสสารมืด"
  civic_dark_consortium_desc: "A deep understanding of the architecture of the universe allowed this society to exploit the mysterious properties of dark matter long before the discovery of the hyperdrive."
@@ -435,14 +435,14 @@
  councilor_hyperspace_specialty_corporate: "$councilor_hyperspace_specialty$"
  councilor_hyperspace_specialty_corporate_female: "$councilor_hyperspace_specialty_corporate$"
  councilor_hyperspace_specialty_corporate_desc: "$councilor_hyperspace_specialty_desc$"
- councilor_dimensional_worship: "Astral Minister"
+ councilor_dimensional_worship: "รัฐมนตรีแอสทรอล"
  councilor_dimensional_worship_female: "$councilor_dimensional_worship$"
  councilor_dimensional_worship_desc: "The $TITLE$ unify our priesthood under a single guiding vision in order to better serve our people."
- councilor_dimensional_worship_custom_modifier_desc: "Each $job_priest_name_with_icon$ also provides §G+$@councilor_dimensional_worship_priest_physics$§! £physics£ §YPhysics§!"
+ councilor_dimensional_worship_custom_modifier_desc: "แต่ละ $job_priest_name_with_icon$ ให้ £physics£ §Yฟิสิกส์§! §G+$@councilor_dimensional_worship_priest_physics$§!"
  councilor_dimensional_worship_corporate: "$councilor_dimensional_worship$"
  councilor_dimensional_worship_corporate_female: "$councilor_dimensional_worship_corporate$"
  councilor_dimensional_worship_corporate_desc: "$councilor_dimensional_worship_desc$"
- councilor_dimensional_worship_corporate_custom_modifier_desc: "Each $job_priest_name_with_icon$ also produces §G+$@councilor_dimensional_worship_priest_physics$§! £physics£ §YPhysics§! and provides §G+$@councilor_dimensional_worship_priest_trade_value$§! $r_trade_value$"
+ councilor_dimensional_worship_corporate_custom_modifier_desc: "แต่ละ $job_priest_name_with_icon$ ยังผลิต §G+$@councilor_dimensional_worship_priest_physics$§! £physics£ §Yฟิสิกส์§! และให้ §G+$@councilor_dimensional_worship_priest_trade_value$§! $r_trade_value$"
  councilor_dark_consortium: "Shadow Weaver"
  councilor_dark_consortium_female: "$councilor_dark_consortium$"
  councilor_dark_consortium_desc: "The $TITLE$'s duties lie in accounting for each and every unit of dark matter, ensuring not a single particle is wasted."
