--- a/mod/thmod/localisation/english/civic_and_origin_concepts_l_english.yml
+++ b/mod/thmod/localisation/english/civic_and_origin_concepts_l_english.yml
@@ -6,12 +6,12 @@
  i_consumer_goods: "£consumer_goods£ §I$consumer_goods$§!"
  i_unity: "£unity£ §I$unity$§!"
  i_influence: "£influence£ §I$influence$§!"
- i_research: "£physics£ £society£ £engineering£ §IResearch Points§!"
+ i_research: "£physics£ £society£ £engineering£ §Iแต้มการวิจัย§!"
  i_physics: "£physics£ §I$physics_research$§!"
  i_society: "£society£ §I$society_research$§!"
  i_engineering: "£engineering£ §I$engineering_research$§!"
- i_amenities: "£amenities£ §IAmenities§!"
- i_trade_value: "£trade_value£ §ITrade Value§!"
+ i_amenities: "£amenities£ §Iความอยู่ดีกินดี§!"
+ i_trade_value: "£trade_value£ §Iมูลค่าการค้า§!"
  i_loyalty: "£loyalty£ §Iความภักดีต่อเดือน§!"
  i_rare_crystals: "£rare_crystals£ §I$rare_crystals$§!"
  i_volatile_motes: "£volatile_motes£ §I$volatile_motes$§!"
@@ -21,8 +21,8 @@
  i_zro: "£sr_zro£ §I$sr_zro$§!"
  i_nanites: "£nanites£ §I$nanites$§!"
  i_minor_artifacts: "£minor_artifacts£ §Iศิลปวัตถุชั้นรอง§!"
- i_strategic: "£rare_crystals£ £exotic_gases£ £volatile_motes£ §IStrategic Resource§!"
- i_strategic_plural: "£rare_crystals£ £exotic_gases£ £volatile_motes£ §IStrategic Resources§!"
+ i_strategic: "£rare_crystals£ £exotic_gases£ £volatile_motes£ §Iทรัพยากรเชิงยุทธศาสตร์§!"
+ i_strategic_plural: "£rare_crystals£ £exotic_gases£ £volatile_motes£ §Iทรัพยากรเชิงยุทธศาสตร์§!"
  i_stability: "£mod_planet_stability_add£ §I$PLANET_STABILITY_TITLE$§!"
  i_naval_capacity: "£mod_country_naval_cap_add£ §Iความจุของยานรบ§!"
  i_defense_armies: "£defense_army£ §Iกองทัพป้องกัน§!"
@@ -149,7 +149,7 @@
  mod_mining_district_buildings_add: "$MOD_PLANET_MAX_BUILDINGS_ADD$ จากเขตเหมืองแร่"
  concept_latent_psionic: "$trait_latent_psionic$"
  concept_latent_psionic_desc: "- $mod_planet_jobs_physics_research_produces_mult$: §G+10%§!\n- $mod_planet_jobs_society_research_produces_mult$: §G+10%§!\n- $mod_planet_jobs_engineering_research_produces_mult$: §G+10%§!\n- $mod_planet_jobs_unity_produces_mult$: §G+5%§!\n\n§L$trait_latent_psionic_desc$§!"
- concept_psionic_ascension: "Psionic Ascension"
+ concept_psionic_ascension: "การยกระดับพลังจิต"
  concept_psionic_ascension_desc: "By unlocking the latent psionic abilities of the mind, it is possible to tap into and draw immense power from The Shroud."
  concept_shroud_beacon: "$sm_shroud_beacon$"
  concept_shroud_beacon_desc: "$sm_shroud_beacon_desc$"
@@ -157,16 +157,16 @@
  concept_shroudwalker_enclave_desc: "$gov_shroudwalker_enclave_desc$"
  concept_psionic_theory: "$tech_psionic_theory$"
  concept_psionic_theory_desc: "- £mod_empire_size_pops_mult£ $MOD_EMPIRE_SIZE_POPS_MULT$: §G-10%§!\n\n§L$tech_psionic_theory_desc$§!"
- concept_cybernetic_ascension: "Cybernetic Ascension"
+ concept_cybernetic_ascension: "การยกระดับไซเบอร์เนติก"
  concept_cybernetic_ascension_desc: "The limits and constraints imposed on us by our feeble organic bodies are simply unacceptable. To reach our full potential, we must turn to cybernetic implants."
  concept_integrated_cybernetics: "$tech_integrated_cybernetics$"
  concept_integrated_cybernetics_desc: "- £mod_pop_environment_tolerance£ $MOD_POP_ENVIRONMENT_TOLERANCE$: §G+5%§!\n\n§L$tech_integrated_cybernetics_desc$§!"
  concept_slingshot_digsite: "$slingshot_digsite$"
  concept_slingshot_digsite_desc: "§L$slingshot_digsite_desc$§!"
  concept_quantum_catapult_restored_slingshot: "$quantum_catapult_restored_slingshot$"
- concept_quantum_catapult_restored_slingshot_desc: "- Range: §Y450§!\n- Spread: §R35§!\n- $MOD_FLEET_MIA_TIME_MULT$: §G-20%§!\n- Windup Speed: §G-30%§!\n- Can be upgraded into an ['concept_quantum_catapult_improved_slingshot']\n\n§L$tech_quantum_catapult_desc$§!"
+ concept_quantum_catapult_restored_slingshot_desc: "- พิสัย: §Y450§!\n- การกระจาย: §R35§!\n- $MOD_FLEET_MIA_TIME_MULT$: §G-20%§!\n- ความเร็วเมื่อสิ้นสุด: §G-30%§!\n- สามารถอัปเกรดเป็น ['concept_quantum_catapult_improved_slingshot'] ได้\n\n§L$tech_quantum_catapult_desc$§!"
  concept_quantum_catapult_improved_slingshot: "$quantum_catapult_improved_slingshot$"
- concept_quantum_catapult_improved_slingshot_desc: "- Range: §Y750§!\n- Spread: §R25§!\n- $MOD_FLEET_MIA_TIME_MULT$: §G-30%§!\n- Windup Speed: §G-60%§!\n\n§L$tech_quantum_catapult_desc$§!"
+ concept_quantum_catapult_improved_slingshot_desc: "- พิสัย: §Y750§!\n- การกระจาย: §R25§!\n- $MOD_FLEET_MIA_TIME_MULT$: §G-30%§!\n- ความเร็วเมื่อสิ้นสุด: §G-60%§!\n\n§L$tech_quantum_catapult_desc$§!"
  concept_quantic_ambush: "$quantic_ambush$"
  concept_quantic_ambush_desc: "- $MOD_SHIP_FIRE_RATE_MULT$: §G+33%§! for 120 days\n\n§LThe instant and unpredictable nature of Quantum Catapult travel allows us to hit foes when they least expect it.§!"
  concept_specialist_subject: "Specialist Subjects"
@@ -187,7 +187,7 @@
  concept_knights_quest_desc: "Unlocks powerful modifiers for £job_knight£ §I$job_knight$§! Jobs and §I$concept_toxic_features$§!.\n\n§L$situation_toxic_knights_desc$§!"
  concept_order_jobs: "งาน Knightly Order"
  concept_order_jobs_desc: "$NEW_LINE$- ['concept_knight_commander', £job_knight_commander£ $job_knight_commander$] $NEW_LINE$- ['concept_knight', £job_knight£ $job_knight$]"
- concept_toxic_features: "Toxic Planetary Features"
+ concept_toxic_features: "คุณสมบัติของดาวเคราะห์พิษ"
  concept_toxic_features_desc: "$NEW_LINE$- ['concept_pools_most_venemous'] $NEW_LINE$- ['concept_pestilential_wasteland'] $NEW_LINE$- ['concept_deitys_swarms'] $NEW_LINE$- ['concept_blight_upon_the_land'] $NEW_LINE$- ['concept_envenomed_seas']"
  toxic_feature_improvement: "$NEW_LINE$- On completing §YKnightly Quests§!: Bonuses on this Planetary Feature"
  concept_pools_most_venemous: "£blocker£ $d_toxic_god_pools_most_venemous$"
@@ -215,7 +215,7 @@
  concept_planetary_government: "$tech_planetary_government$"
  concept_planetary_government_desc: "- $i_unlocks_building$ $building_capital$\n- $i_unlocks_building$ $building_precinct_house$\n- $i_unlocks_building$ $building_bureaucratic_1$\n\n§L$tech_planetary_government_desc$§!"
  concept_corvettes: "$tech_corvettes$"
- concept_corvettes_desc: "- §IUnlocks Ship Type§!: $corvette$\n\n§L$tech_corvettes_desc$§!"
+ concept_corvettes_desc: "- §Iปลดล็อกยานประเภท§!: $corvette$\n\n§L$tech_corvettes_desc$§!"
  concept_clinic: "$building_clinic$"
  concept_clinic_desc: "- £mod_job_healthcare_add£ งาน ['concept_healthcare', $job_healthcare$]: §G+2§!\n\n§L$building_clinic_desc$§!"
  concept_mineral_purification_plant: "$building_mineral_purification_plant$"
@@ -265,7 +265,7 @@
  concept_federation: "สหพันธ์"
  concept_federation_desc: "A Federation is a supranational alliance of space-faring civilizations."
  concept_common_ground_federation: "$concept_federation$"
- concept_common_ground_federation_desc: "$concept_federation_desc$\n\n There are different types of Federations:\n- ['concept_default_federation']\n- ['concept_military_federation']\n- ['concept_research_federation']\n- ['concept_spiritualist_federation']\n- ['concept_trade_federation']"
+ concept_common_ground_federation_desc: "$concept_federation_desc$\n\n สหพันธ์มีหลายประเภท:\n- ['concept_default_federation']\n- ['concept_military_federation']\n- ['concept_research_federation']\n- ['concept_spiritualist_federation']\n- ['concept_trade_federation']"
  concept_default_federation: "$default_federation$"
  concept_default_federation_desc: "$default_federation_desc$"
  concept_trade_federation: "$trade_federation$"
@@ -279,9 +279,9 @@
  concept_spiritualist_federation: "$spiritualist_federation$"
  concept_spiritualist_federation_desc: "$spiritualist_federation_desc$\n\n§ERequirements:§!\n- $civic_tooltip_spiritualist$"
  concept_diplomacy_traditions: "$tr_diplomacy_adopt$"
- concept_diplomacy_traditions_desc: "- §IUnlocks Edict:§! $edict_diplomatic_grants$\n- §I$MOD_COUNTRY_DIPLOMACY_INFLUENCE_COST$§! reduced by §G50%§!.\n\n§L$tradition_diplomacy_desc$§!"
+ concept_diplomacy_traditions_desc: "- §Iปลดล็อกประกาศคำสั่ง:§! $edict_diplomatic_grants$\n- §I$MOD_COUNTRY_DIPLOMACY_INFLUENCE_COST$§! ลดลง §G50%§!\n\n§L$tradition_diplomacy_desc$§!"
  concept_tr_diplomacy_the_federation: "$tr_diplomacy_the_federation$"
- concept_tr_diplomacy_the_federation_desc: "- §IUnlocks Diplomacy:§! Form Federation\n- §I$MOD_COUNTRY_ENVOYS_ADD$§! are increased by §G1§!.\n\n§L$tr_diplomacy_the_federation_delayed$§!"
+ concept_tr_diplomacy_the_federation_desc: "- §Iปลดล็อกการทูต:§! การสร้างสหพันธ์\n- §I$MOD_COUNTRY_ENVOYS_ADD$§! เพิ่มขึ้น §G1§!\n\n§L$tr_diplomacy_the_federation_delayed$§!"
  concept_doomsday_modifier: "$doomsday_1$"
  concept_doomsday_modifier_desc: "- ดาวเคราะห์ดวงนี้จะ §Rระเบิด§! ภายใน §I35 ถึง 45 ปี§!\n\nความเปลี่ยนแปลงจะเพิ่มขึ้นเรื่อยๆจนถึงขั้นสูงสุดดังนี้:\n- $mod_planet_jobs_alloys_produces_mult$: §G+120%§!\n- $mod_planet_jobs_minerals_produces_mult$: §G+120%§!\n- $mod_planet_jobs_energy_produces_mult$: §G+120%§!\n- $MOD_PLANET_EMIGRATION_PUSH_ADD$: §G100%§!\n- $MOD_PLANET_STABILITY_ADD$: §R-30§!\n- $MOD_PLANET_IMMIGRATION_PULL_MULT$: §R-50%§!\n- $MOD_POP_ENVIRONMENT_TOLERANCE$: §R-90%§!\n\n§L$doomsday_1_desc$§!"
  concept_colonial_spirit: "$colonial_spirit_mod$"
