--- a/mod/thmod/localisation/english/fallen_empire_l_english.yml
+++ b/mod/thmod/localisation/english/fallen_empire_l_english.yml
@@ -27,9 +27,9 @@
  tech_fe_fortress_1_desc: "$building_fe_fortress_desc$"
  tech_fe_fortress_2: "$building_fe_stronghold$"
  tech_fe_fortress_2_desc: "$building_fe_stronghold_desc$"
- tech_fe_administration_1: "Fractal Administration Processes"
+ tech_fe_administration_1: "กระบวนการบริหารจัดการแฟร็กทัล"
  tech_fe_administration_1_desc: "Our administrative requirements will likewise expand as our mastery of advanced technology evolves. We must adeptly cater to the demands of our burgeoning empire."
- tech_fe_administration_2: "Quantic Administration Processes"
+ tech_fe_administration_2: "กระบวนการบริหารเชิงปริมาณ"
  tech_fe_administration_2_desc: "Our technology now surpasses any administrative requirement. The expertise needed to seamlessly govern a galactic empire is firmly within our reach."
  tech_fe_assembly_1: "$building_fe_assembly_1$"
  tech_fe_assembly_1_desc: "$building_fe_assembly_1_desc$"
@@ -73,33 +73,33 @@
  building_ancient_palace_desc:0 "This immense palatial complex is a testament to an era long gone. Despite its luminous facade refusing to succumb to the passage of time, many of its wings lay abandoned in various states of disrepair."
  building_ancient_hive_capital: "Venerable Nucleus"
  building_ancient_hive_capital_desc: "This ancient nexus of the hive's supremacy is where uncountable generations of drones have dutifully executed directives."
- building_affluence_emporium: "Affluence Emporium"
+ building_affluence_emporium: "ห้างสรรพสินค้าแห่งความมั่งคั่ง"
  building_affluence_emporium_desc: "This center anticipates and fulfills material desires using an advanced procurement algorithm, delivering satisfaction before the populace realizes their wants."
- building_affluence_center:0 "Affluence Center"
+ building_affluence_center:0 "ศูนย์การค้าแห่งความมั่งคั่ง"
  building_affluence_center_desc:0 "This center effortlessly materializes the most outlandish desires at a moment's notice."
- building_nourishment_complex: "Nourishment Complex"
+ building_nourishment_complex: "อาหารบำรุงคอมเพล็กซ์"
  building_nourishment_complex_desc: "Replication technology swiftly conjures up novel flavors on command."
- building_nourishment_center:0 "Nourishment Center"
+ building_nourishment_center:0 "ศูนย์อาหารบำรุง"
  building_nourishment_center_desc:0 "Every conceivable flavor can be replicated within these walls."
- building_dimensional_replicator: "Dimensional Replicator"
+ building_dimensional_replicator: "เครื่องจำลองมิติ"
  building_dimensional_replicator_desc: "This fabricator's technology achieves flawless conversion from energy to matter."
- building_dimensional_fabricator:0 "Dimensional Fabricator"
+ building_dimensional_fabricator:0 "เครื่องสร้างมิติ"
  building_dimensional_fabricator_desc:0 "This advanced fabricator seamlessly tunnels into the fabric of dimensional space, extracting valuable resources."
- building_class_3_singularity: "Class-3 Singularity"
+ building_class_3_singularity: "ภาวะเอกฐาน คลาส-3"
  building_class_3_singularity_desc: "Capturing the entire energy output from this singularity is an engineering marvel."
- building_class_4_singularity:0 "Class-4 Singularity"
+ building_class_4_singularity:0 "ภาวะเอกฐาน คลาส-4"
  building_class_4_singularity_desc:0 "This singularity's power output challenges the laws of physics, yet the containment fields hold with unwavering stability."
- building_micro_forge: "Hyper-Forge"
+ building_micro_forge: "เครื่องหลอมไฮเปอร์"
  building_micro_forge_desc: "This forge's production speed is limited only by the quantity of resources loaded into it."
- building_nano_forge:0 "Auto-Forge"
+ building_nano_forge:0 "เครื่องหลอมอัตโนมัติ"
  building_nano_forge_desc:1 "The expansive nano-replicator bays in this forge transform raw materials into advanced alloys with marvelous efficiency."
- building_fe_sky_dome: "Sky Dome"
+ building_fe_sky_dome: "สกายโดม"
  building_fe_sky_dome_desc: "This floating city, propelled by state-of-the-art anti-gravity technology, provides an idyllic haven for its inhabitants."
- building_fe_dome: "Empyrean Dome"
+ building_fe_dome: "เอมไพเรียนโดม"
  building_fe_dome_desc: "Suspended by gravimetric nullification, these domes transcend physical limitations, while advanced life support systems seamlessly cater to inhabitants' needs."
- building_fe_fortress: "Aspis Bastion"
+ building_fe_fortress: "ป้อมปราการแอสพิส"
  building_fe_fortress_desc: "This colossal planetary defense complex has numerous armories and layers of shielding. Only a highly specialized siege force could breach its defenses."
- building_fe_stronghold: "Aegis Complex"
+ building_fe_stronghold: "เอจิส คอมเพล็กซ์"
  building_fe_stronghold_desc: "This monumental planetary defense complex protects with countless armories and shielding; the planet's mountains will crumble before its defenses."
  building_master_archive:0 "Master Archive"
  building_master_archive_desc:0 "This repository houses knowledge from multiple galactic ages, yet the ability to operate its arcane retrieval system is lost. Extracted data scraps prove invaluable."
@@ -123,37 +123,37 @@
  building_fe_temple_1_desc: "Cutting-edge advancements in metaphysical technology grant devotees a direct communion with the divine essence."
  building_fe_temple_2: "Celestial Cathedral"
  building_fe_temple_2_desc: "Using metaphysical technology for psionic sermons amplifies spiritual resonance. This immense complex enables worshippers to intimately connect to the divine essence at a system-wide range."
- building_fe_assembly_1: "Robot Manufacturing Nexus"
+ building_fe_assembly_1: "ศูนย์ผลิตหุ่นยนต์"
  building_fe_assembly_1_desc: "An avant-garde assembly complex manned by expert Roboticists, this facility transcends conventional bounds, meticulously realizing the forefront of robotic innovation."
- building_fe_assembly_2: "Robot Quantum Production Hub"
+ building_fe_assembly_2: "ศูนย์ผลิตหุ่นยนต์ควอนตัม"
  building_fe_assembly_2_desc: "A marvel in engineering, this facility's quantic assembly line uses entanglement converters to craft machine parts down to the most minute detail. Not a single atom is misplaced."
- building_fe_clinic_1: "Molecular-Revitalization Institute"
+ building_fe_clinic_1: "สถาบันฟื้นฟูโมเลกุล"
  building_fe_clinic_1_desc: "Molecular-Revitalization Institutes delve deep into cellular intricacies to amplify the effectiveness of medical treatments, significantly improving the quality and longevity of the populations' health."
- building_fe_clinic_2: "Bioregeneration Institute"
+ building_fe_clinic_2: "สถาบันฟื้นฟูทางชีวภาพ"
  building_fe_clinic_2_desc: "The Bioregeneration Institute, at the pinnacle of medical technology, pioneers groundbreaking bio-regenerative therapies, continuously redefining the boundaries of life extension."
- building_fe_security_1: "Justice Complex"
+ building_fe_security_1: "ศูนย์ยุติธรรมครบวงจร"
  building_fe_security_1_desc: "This massive judicial complex seamlessly intertwines courts and law enforcement."
- building_fe_security_2: "Ziggurat of Justice"
+ building_fe_security_2: "ซิกกุรัตแห่งความยุติธรรม"
  building_fe_security_2_desc: "The zenith of legal institutions, this colossal edifice is a monument to justice, harboring courts, holding facilities, and correctional facilities that will redeem even the most hardened criminals."
- building_fe_market_1: "Galactic Commerce Hub"
+ building_fe_market_1: "ฮับการค้ากาแล็กติก"
  building_fe_market_1_desc: "Dominating the skyline, these towering spires cast shadows across the bustling trade districts below."
- building_fe_market_2: "Interstellar Commerce Nexus"
+ building_fe_market_2: "ศูนย์รวมการค้าระหว่างดวงดาว"
  building_fe_market_2_desc: "Reigning supreme in the galactic economy, the colossal spires of this trade district can be seen from orbit."
- building_fe_silo_1: "Shrinkspace Depot"
+ building_fe_silo_1: "คลังพัสดุแบบหดตัว"
  building_fe_silo_1_desc: "The depot influences a portion of subspace where the distance between molecules is reduced, effectively shrinking anything stored there. Living beings are forbidden from entering it."
- building_fe_silo_2: "Extra-Dimensional Depot"
+ building_fe_silo_2: "คลังพัสดุต่างมิติ"
  building_fe_silo_2_desc: "By creating a localized pocket dimension, we can hold nearly endless resources."
- building_fe_entertainment_1: "Virtual Bliss Plaza"
+ building_fe_entertainment_1: "Bliss Plaza เสมือนจริง"
  building_fe_entertainment_1_desc: "These immense entertainment sectors are at the forefront of recreation and leisure. Brainwave readers allow for instantaneous and personalized virtual getaways."
  building_fe_entertainment_2: "Omni-Bliss Nexus"
  building_fe_entertainment_2_desc: "A colossal culmination of entertainment, this nexus transcends conventional limits, where dreams materialize before desires are realized."
- building_fe_lab_1: "Quantum Innovation Nexus"
+ building_fe_lab_1: "ศูนย์นวัตกรรมควอนตัม"
  building_fe_lab_1_desc: "This nexus boasts state-of-the-art equipment and an unprecedented staff capacity, ushering in an era where quantum theories are not just explored but harnessed for groundbreaking innovation."
- building_fe_lab_2: "Transcendental Innovation Department"
+ building_fe_lab_2: "ศูนย์นวัตกรรมเหนือธรรมชาติ"
  building_fe_lab_2_desc: "This building is the apex of scientific advancement and proves this is an era of boundless innovation."
- building_fe_mine_1: "Quantum Drilling Plant"
+ building_fe_mine_1: "โรงงานขุดเจาะควอนตัม"
  building_fe_mine_1_desc: "This mining plant can find minerals anywhere in this planet's mantle using quantum tunneling technology to bore through solid materials without physical contact."
- building_fe_mine_2: "Quantum Drilling Hub"
+ building_fe_mine_2: "ศูนย์กลางการขุดเจาะควอนตัม"
  building_fe_mine_2_desc: "This mining hub can extract minerals anywhere down to the planet's outer core using quantum tunneling technology to bore through solid or liquid materials without physical contact."
  job_fe_overseer:0 "Overseer"
  job_fe_overseer_plural:0 "Overseers"
