--- a/mod/thmod/localisation/english/federations_l_english.yml
+++ b/mod/thmod/localisation/english/federations_l_english.yml
@@ -36,7 +36,7 @@
  origin_tooltip_default_effects_lithoid: "$origin_tooltip_default_effects_start$$TABBED_NEW_LINE$- ['concept_mining_district', £district£ $district_mining_plural$]: §G+1§!$origin_tooltip_default_effects_end$"
  origin_mechanists:0 "$civic_mechanists$"
  origin_mechanists_desc:0 "อารยธรรมนี้หมกมุ่นอยู่กับแนวคิดของเครื่องโลหะที่ทำงานอัตโนมัติตั้งแต่ก่อนยุคไอน้ำ แม้ว่าหลายคนจะบอกว่าไม่สามารถทำได้ แต่หุ่นยนต์ตัวจริงตัวแรกก็ออกจากสายการผลิตไปก่อนที่จะบินไปยังอวกาศได้สำเร็จ"
- origin_tooltip_mechanists_effects:3 "- §I$pops_with_icon$§! ['concept_robots', £mod_planet_jobs_robotic_produces_mult£ หุ่นยนต์]: 8$TABBED_NEW_LINE$- คุณลักษณะหุ่นยนต์: ['concept_adaptive_frames']$NEW_LINE$- ดาวบ้านเกิด: ['concept_robot_assembly_plant',£building£ Robot Assembly Plant]$NEW_LINE$- $ADDITONAL_TECHNOLOGIES_STRING$$TABBED_NEW_LINE$- ['concept_powered_exoskeletons', £engineering_research£ $tech_powered_exoskeletons$]$TABBED_NEW_LINE$- ['concept_robotic_workers', £engineering_research£ $tech_robotic_workers$]$NEW_LINE$- $GUARANTEED_RESEARCH_OPTION_STRING$ ['concept_robomodding', £engineering_research£ $tech_robomodding$]"
+ origin_tooltip_mechanists_effects:3 "- §I$pops_with_icon$§! ['concept_robots', £mod_planet_jobs_robotic_produces_mult£ หุ่นยนต์]: 8$TABBED_NEW_LINE$- คุณลักษณะหุ่นยนต์: ['concept_adaptive_frames']$NEW_LINE$- ดาวบ้านเกิด: ['concept_robot_assembly_plant',£building£ โรงประกอบหุ่นยนต์]$NEW_LINE$- $ADDITONAL_TECHNOLOGIES_STRING$$TABBED_NEW_LINE$- ['concept_powered_exoskeletons', £engineering_research£ $tech_powered_exoskeletons$]$TABBED_NEW_LINE$- ['concept_robotic_workers', £engineering_research£ $tech_robotic_workers$]$NEW_LINE$- $GUARANTEED_RESEARCH_OPTION_STRING$ ['concept_robomodding', £engineering_research£ $tech_robomodding$]"
  origin_syncretic_evolution:0 "$civic_syncretic_evolution$"
  origin_syncretic_evolution_desc:0 "สิ่งมีชีวิตชนิดที่สองเป็นส่วนสำคัญของอารยธรรมนี้ พวกเขาตัวใหญ่แข็งแรงและส่วนใหญ่จะมีความฉลาดเหมือนเด็กที่มีความบกพร่อง สงครามสมัยโบราณได้กำจัดสายพันธุ์ของพวกเขาที่มีแนวโน้มก้าวร้าวมากที่สุดออกไป"
  origin_tooltip_syncretic_evolution_effects: "- £pop£ §Iประชากร§! สิ่งมีชีวิตที่มีคุณลักษณะ ['concept_syncretic_proles']: 12"
@@ -1351,7 +1351,7 @@
  development_aides_regular:0 "$resolution_development_aides$"
  resolution_galactic_threats_committee:0 "คณะกรรมาธิการจัดการภัยคุกคามกาแล็กติก"
  resolution_galactic_threats_committee_desc:0 "Who knows what threats lurk just out of sensor range? Creating a committee dedicated to the study of galactic level threats will prepare us for anything."
- resolution_galactic_threats_committee_modifier_desc:0 "Damage to Endgame Crisis factions: §G+20%§!\n§R+10%§! Researchers upkeep.\n§RDangerous experiments might have dangerous results.§!"
+ resolution_galactic_threats_committee_modifier_desc:0 "- สร้างความเสียหายให้กับฝ่ายไครซิสตอนจบเกม: §G+20%§!\n- ค่าบำรุงรักษานักวิจัย §R+10%§!\n-§Rการทดลองอันตรายอาจมีผลลัพธ์ที่เป็นอันตราย§!"
  resolution_community_champions_repeal:1 "ยกเลิก $resolution_community_champions$"
  resolution_community_champions_repeal_desc:1 "ยกเลิกมติ §Y$resolution_community_champions$§!"
  resolution_constitutional_immunity_repeal:0 "ยกเลิก $resolution_constitutional_immunity$"
@@ -2101,10 +2101,10 @@
  mod_habitat_districts_housing_add: "Housing from Habitat Districts"
  hab_mining_deposits: "Habitat Mining Deposits"
  hab_research_deposits: "Habitat Research Deposits"
- mod_hab_mining_deposits_produces_mult: "Resources from $hab_mining_deposits$"
- mod_hab_research_deposits_produces_mult: "Resources from $hab_research_deposits$"
+ mod_hab_mining_deposits_produces_mult: "ทรัพยากรจาก $hab_mining_deposits$"
+ mod_hab_research_deposits_produces_mult: "ทรัพยากรจาก $hab_research_deposits$"
  hab_deposits: "Habitat Deposits"
- mod_hab_deposits_produces_mult: "Resources from $hab_deposits$"
+ mod_hab_deposits_produces_mult: "ทรัพยากรจาก $hab_deposits$"
  mod_habitat_district_jobs_add: "งานจากเขตต่างๆบนที่อยู่อาศัยในอวกาศ"
  d_arcane_replicator:0 "Arcane Replicator"
  d_arcane_replicator_desc:0 "This ancient machine is nestled deep within the habitat's interior, built into its main reactor from where it also draws its power. A relic of whomever originally built this habitat, its matter replication technology is utterly incomprehensible to us."
