--- a/mod/thmod/localisation/english/first_contact_l_english.yml
+++ b/mod/thmod/localisation/english/first_contact_l_english.yml
@@ -1570,10 +1570,10 @@
  MESSAGE_SYSTEM_LOST_TO_PRE_FTL_TITLE:0 "System Lost"
  MESSAGE_SYSTEM_LOST_TO_PRE_FTL:0 "A pre-FTL civilization in the $SYSTEM|Y$ system has achieved spaceflight and now claim the system as their own."
  fan_xenophile_insight_gain:0 "[GetFanXenoInsightGain]"
- fan_xenophile_insight_gain_has_dlc:1 "Gains §G100%§! more Insights from observing pre-FTL Civilizations"
+ fan_xenophile_insight_gain_has_dlc:1 "ได้รับข้อมูลเชิงลึกเพิ่มเติม §G100%§! จากการสังเกตอารยธรรม pre-FTL"
  fan_xenophile_insight_gain_has_no_dlc:0 ""
  xenophile_insight_gain:0 "[GetXenoInsightGain]"
- xenophile_insight_gain_has_dlc:1 "Gains §G50%§! more Insights from observing pre-FTL Civilizations"
+ xenophile_insight_gain_has_dlc:1 "ได้รับข้อมูลเชิงลึกเพิ่มเติม §G50%§! จากการสังเกตอารยธรรม pre-FTL"
  xenophile_insight_gain_has_no_dlc:0 ""
  passive_observation_insight_gain_has_dlc:0 "\n\nGain a §Gminor§! amount of progress to exclusive technologies by studying the utterly alien behavior of our research subject.\n"
  passive_observation_insight_gain_has_no_dlc:0 ""
@@ -1689,12 +1689,12 @@
  stuffed_toy:0 "Stuffed Toy"
  stuffed_toy_desc:0 "A stuffed toy made in our likeness. It fills us with determination."
  plushie_tariff:0 "Plushie Tariff"
- mod_station_observers_energy_produces_add:0 "$mod_country_energy_produces_mult$ from Observation Outposts"
- mod_station_observers_unity_produces_add:0 "$mod_country_unity_produces_mult$ from Observation Outposts"
- mod_station_observers_physics_research_produces_add:0 "$mod_country_physics_produces_mult$ from Observation Outposts"
- mod_station_observers_engineering_research_produces_add:0 "$mod_country_engineering_research_produces_mult$ from Observation Outposts"
- mod_station_observers_society_research_produces_add:0 "$mod_country_society_research_produces_mult$ from Observation Outposts"
- mod_station_observers_influence_produces_add:0 "$mod_country_influence_produces_mult$ from Observation Outposts"
+ mod_station_observers_energy_produces_add:0 "$mod_country_energy_produces_mult$ จากสถานีสังเกตการณ์"
+ mod_station_observers_unity_produces_add:0 "$mod_country_unity_produces_mult$ จากสถานีสังเกตการณ์"
+ mod_station_observers_physics_research_produces_add:0 "$mod_country_physics_produces_mult$ จากสถานีสังเกตการณ์"
+ mod_station_observers_engineering_research_produces_add:0 "$mod_country_engineering_research_produces_mult$ จากสถานีสังเกตการณ์"
+ mod_station_observers_society_research_produces_add:0 "$mod_country_society_research_produces_mult$ จากสถานีสังเกตการณ์"
+ mod_station_observers_influence_produces_add:0 "$mod_country_influence_produces_mult$ จากสถานีสังเกตการณ์"
  fircon.8025.name:0 "Freeport Established"
  fircon.8025.desc:0 "Per our trade agreement with the [freeport_country.GetName] [GetPreFTLUpperPlural], we have established a small spaceport near one of their major settlements. Free from regulation, our merchants are reaping massive profits, but are forbidden of leaving the complex.\n\nAs a result, smugglers and organized gangs have established a thriving black market economy. So far, the [freeport_species.GetAdj] have turned a blind eye, but if things continue, the freeport will inevitably be overrun by criminals."
  fircon.8025.a:0 "Ask to open additional freeports."
@@ -1754,7 +1754,7 @@
  fircon.8055.c:0 "Pressure the [preftl_hagglers_country.GetName] into better deals."
  leader_trait_preftl_haggler:0 "หัวธุรกิจ"
  leader_trait_preftl_haggler_desc:1 "Coming from a [Owner.GetPreFTLUpper] country, this leader has displayed an exceptionally keen mind for business."
- preftl_hagglers_mod:0 "Predictive Trading Algorithms"
+ preftl_hagglers_mod:0 "คาดการณ์อัลกอริทึมซื้อขาย"
  preftl_hagglers_mod_desc:0 "Our studies of the [preftl_hagglers_country.GetName] [GetPreFTLUpperPlural] and their aggressive trading practices have produced some compelling economic models."
  fircon.8500.name:0 "Misuse of Technology"
  fircon.8500.desc.regular:0 "To foster good will, we agreed to share our matter replication technology with the inhabitants of [preftl_misusers_planet.GetName]. Of course, we expected them to use it to reduce resource scarcity, but now we are receiving reports that the technology is being weaponized.\n\nThe inhabitants have arrived at the bold idea of reversing the functionality of a replication unit so rather than assembling pre-programmed matter, the device can now be used to disassemble living beings at the atomic level."
@@ -1915,7 +1915,7 @@
  open_technological_enlightenment_pacts:0 "Provide Technology Pacts"
  societal_enlightenment_pacts:1 "Societal Guidance Pacts"
  pre_ftl_trade_pacts:0 "Pre-FTL Commercial Pacts"
- eager_explorers_base_effect:1 "§RStart at a technological and infrastructural disadvantage, and with 10 fewer £pops£ Pops than normal!§!\nStart with 2 §H$explorer_vessel_plural$§! and an §H$engineer_vessel$§! equipped with §HSubspace Drives§!, making them incapable of Hyperlane travel but granting limited Jump Drive abilities.\nGain an increased chance to discover §HFTL Travel§! Technologies"
+ eager_explorers_base_effect:1 "- §Rเริ่มต้นที่ความเสียเปรียบทางเทคโนโลยีและโครงสร้างพื้นฐานและมีประชากรน้อยกว่าปกติ 10 £pops£ ประชากร!§!\n- เริ่มต้น 2 §H$explorer_vessel_plural$§! และ §H$engineer_vessel$§! ติดตั้ง §Hระบบขับเคลื่อนในทางลัดอวกาศ§!, ทำให้พวกเขาไม่สามารถเดินทางผ่านไฮเปอร์เลนได้ แต่ได้รับความสามารถจั้มไดร์ฟที่จำกัด\n- รับโอกาสเพิ่มขึ้นในการค้นพบเทคโนโลยี §Hการเดินทางเร็วกว่าแสง§!"
  civic_eager_explorers:0 "นักสำรวจที่กระตือรือร้น"
  civic_eager_explorers_desc:0 "Yearning for the stars, this civilization sped through several stages of development, reaching the age of galactic exploration far earlier than most."
  civic_eager_explorers_effects:0 "$eager_explorers_base_effect$"
@@ -1927,9 +1927,9 @@
  civic_hive_stargazers_effects:1 "$eager_explorers_base_effect$\nAdds the §H$trait_stargazer$§! trait.\nBegin with low Intel about your starting cluster."
  civic_machine_exploration_protocol:0 "โปรโตคอลการสำรวจ"
  civic_machine_exploration_protocol_desc:0 "The foundation of this Machine Intelligence's central programming is the drive to catalog exoplanetary life. In pursuit of this directive, it has dedicated much of its resources to crafting a small fleet of vessels capable of limited subspace travel."
- civic_machine_exploration_protocol_effects:1 "$eager_explorers_base_effect$\nGain §G50%§! more Insight progress from observing pre-FTL Civilizations.\nGain £unity£§HUnity§! every time you finish establishing first contact."
+ civic_machine_exploration_protocol_effects:1 "$eager_explorers_base_effect$\n- ได้รับข้อมูลเชิงลึกเพิ่มเติม §G50%§! จากการสังเกตอารยธรรม pre-FTL\n- ได้รับ £unity£§Hเอกภาพ§! ทุกครั้งเมื่อคุณสามารถสร้างการติดต่อครั้งแรกได้สำเร็จ"
  civic_tooltip_not_eager_explorers: "ไม่มีพลเมือง ['concept_eager_explorers_civics']"
- concept_eager_explorers_civics: "Eager Explorers"
+ concept_eager_explorers_civics: "นักสำรวจที่กระตือรือร้น"
  concept_eager_explorers_civics_desc: "คุณสมบัติพลเมือง $concept_eager_explorers_civics$ ประกอบด้วย \n- ['civic:civic_eager_explorers']$NEW_LINE$- ['civic:civic_privatized_exploration']$NEW_LINE$- ['civic:civic_hive_stargazers']$NEW_LINE$- ['civic:civic_machine_exploration_protocol']"
  hyper_drive_plural:0 "hyper drives"
  subspace_drive_plural:0 "ระบบขับเคลื่อนในทางลัดอวกาศ"
@@ -1937,11 +1937,11 @@
  subspace_drive: "subspace drive"
  trait_stargazer:0 "Stargazer"
  trait_stargazer_desc:0 "$trait_presapient_starborn_desc$"
- explorer_vessel:0 "Exploration Vessel"
- explorer_vessel_plural:0 "Exploration Vessels"
+ explorer_vessel:0 "ยานสำรวจ"
+ explorer_vessel_plural:0 "ยานสำรวจ"
  NAME_Explorer_Vessel:0 "$explorer_vessel$"
- engineer_vessel:0 "Engineering Vessel"
- engineer_vessel_plural:0 "Engineering Vessels"
+ engineer_vessel:0 "ยานวิศวกรรม"
+ engineer_vessel_plural:0 "ยานวิศวกรรม"
  NAME_Engineer_Vessel:0 "$engineer_vessel$"
  colony_vessel:0 "Colonization Vessel"
  colony_vessel_plural:0 "Colonization Vessels"
