--- a/mod/thmod/localisation/english/l_english.yml
+++ b/mod/thmod/localisation/english/l_english.yml
@@ -229,13 +229,13 @@
  CANCEL_EXTORT_FACTION: "หยุดบีบบังคับกลุ่มการเมือง"
  CANCEL_EXTORT_FACTION_DESC: "Stop requiring this faction to produce resources during their sleep cycle."
  ONLY_ONE_EXTORTED_FACTION_TT: "§ROnly one faction can be extorted at a time.§!"
- TRAIT_REQUIRES_NO_ETHIC:1 "$TRAIT|H$ §Rcannot be combined with any Governing Ethics.§!"
+ TRAIT_REQUIRES_NO_ETHIC:1 "$TRAIT|H$ §Rไม่สามารถใช้ร่วมกับจริยธรรมใดได้§!"
  TRAIT_REQUIRES_ETHIC:2 "$TRAIT|H$ §Rต้องการหนึ่งในจริยธรรมดังต่อไปนี้:§!"
- TRAIT_FORBIDS_ETHIC: "$TRAIT|H$ §Rcannot be combined with any of the following Ethics:§!"
+ TRAIT_FORBIDS_ETHIC: "$TRAIT|H$ §Rไม่สามารถใช้ร่วมกับจริยธรรมต่อไปนี้ได้:§!"
  TRAIT_REQUIRES_CLASS:2 "$TRAIT|H$ §Rrequires one of the following Species Archetypes:§!"
- TRAIT_REQUIRES_SPECIES_CLASS:1 "$TRAIT|H$ §ต้องการหนึ่งในเผ่าพันธุ์ดังต่อไปนี้:§!"
+ TRAIT_REQUIRES_SPECIES_CLASS:1 "$TRAIT|H$ §Rต้องการหนึ่งในเผ่าพันธุ์ดังต่อไปนี้:§!"
  TRAIT_REQUIRES_ORIGIN:0 "$TRAIT|H$ §Rrequires one of the following Origins:§!"
- TRAIT_FORBIDS_ORIGIN: "$TRAIT|H$ §Rcannot be combined with any of the following Origins:§!"
+ TRAIT_FORBIDS_ORIGIN: "$TRAIT|H$ §Rไม่สามารถใช้ร่วมกับจุดเริ่มต้นต่อไปนี้ได้:§!"
  RECENTLY_CHANGED_SPECIES_RIGHT:0 "§RWe recently changed this species policy. We will be able to change it again on $DATE|Y$.§!"
  RECENTLY_CHANGED_SPECIES_RIGHTS_CANT_RESET:0 "§RWe recently changed species policies. We will be able to reset all rights again on $DATE|Y$.§!"
  PLANNED_SECTOR_PROJECT_HEADER:0 "§Eโครงการของเซ็กเตอร์§!"
@@ -3865,7 +3865,7 @@
  trait_robot_power_drills_desc:0 "§LOutfit a robot with a battery of power drills, and everything looks like a mineral deposit.§!\n"
  trait_robot_harvesters:0 "เครื่องเก็บเกี่ยว"
  trait_robot_harvesters_desc:0 "§LA suite of tools, from nutrient solution diagnostics and on-site balancing to per-stalk micro-threshing, enables robotic workers to increase produce yields.§!\n"
- trait_robot_efficient_processors:0 "CPU ที่มีประสิทธิภาพ"
+ trait_robot_efficient_processors:0 "CPU มีประสิทธิภาพ"
  trait_robot_efficient_processors_desc:1 "§LThese highly efficient processors increase the potential workload and endurance of all units.§!"
  trait_robot_logic_engines:0 "เครื่องตรรกะ"
  trait_robot_logic_engines_desc:0 "§Lการนำทางไปสู่พรมแดนที่ซับซ้อนอย่างมีประสิทธิภาพในวิทยาศาสตร์นั้นจำเป็นต้องมีสถานะใหม่นอกเหนือจาก simple half-truths of ternary และ ตรรกะควอเทอร์นารี§!\n"
@@ -3928,7 +3928,7 @@
  trait_robot_streamlined_protocols_desc:0 "§LExtensively batched AI processes allow these units to scale greatly in numbers with minimal loss of efficiency.§!"
  trait_robot_high_bandwidth:0 "แบนด์วิดท์สูง"
  trait_robot_high_bandwidth_desc:0 "§LEach individual unit sends and receives a large amount of largely duplicate data, causing exponential lag as the number of units attached to each central processing hub increases.§!"
- trait_robot_trading_algorithms:0 "Trading Algorithms"
+ trait_robot_trading_algorithms:0 "อัลกอริทึมซื้อขาย"
  trait_robot_trading_algorithms_desc:0 "§LPredictive algorithms allow for maximum optimization. Infinitesimal market fluctuations in currency rates, stock availability, and the emotional response of organic partners are accounted for.§!"
  trait_robot_quarrelsome: "$trait_quarrelsome$"
  trait_robot_quarrelsome_desc: "$trait_quarrelsome_desc$"
@@ -4007,11 +4007,11 @@
  trait_pc_gaia_preference_terraforming:0 "$trait_pc_gaia_preference$"
  trait_pc_gaia_preference_terraforming_desc:0 "§LClimate preference is determined at the genetic level, and in this case, by accident.§!"
  gaia_preference_terraforming_trait_tooltip:2 "ผลผลิตของประชากรบนดาวไกอา: §G+5%§!"
- trait_dry_planet_preference: "Dry Planet Preference"
+ trait_dry_planet_preference: "สิทธิพิเศษในดาวเคราะห์แห้ง"
  trait_dry_planet_preference_desc: "§LClimate preference is determined by design.§!"
- trait_wet_planet_preference: "Wet Planet Preference"
+ trait_wet_planet_preference: "สิทธิพิเศษในดาวเคราะห์เปียกชื้น"
  trait_wet_planet_preference_desc: "§LClimate preference is determined by design.§!"
- trait_frozen_planet_preference: "Frozen Planet Preference"
+ trait_frozen_planet_preference: "สิทธิพิเศษในดาวเคราะห์เย็นจัด"
  trait_frozen_planet_preference_desc: "§LClimate preference is determined by design.§!"
  trait_machine_habitat_planet_preference: "$trait_pc_habitat_preference$"
  trait_machine_habitat_planet_preference_desc: "$trait_frozen_planet_preference_desc$"
@@ -6550,7 +6550,7 @@
  living_standard_deassimilation:0 "แยกตัวออกจาก Hive"
  living_standard_deassimilation_tooltip:1 "This species is undergoing a difficult physiological separation from a Hive Mind."
  living_standard_deassimilation_tooltip_delayed:1 "§LWelcome out of the fold.§!"
- living_standard_ego_assimilation:0 "สลายอัตลักษณ์"
+ living_standard_ego_assimilation:0 "สลายตัวตน"
  living_standard_ego_assimilation_tooltip:1 "เผ่าพันธุ์นี้กลายเป็นหนึ่งเดียวกับจิตวิญญาณที่เป็นหนึ่งเดียวกัน"
  living_standard_ego_assimilation_tooltip_delayed:1 "§LThe sense of self does not survive the process. But that's the point.§!"
  living_standard_ego_assimilation_psionic:0 "$living_standard_ego_assimilation$"
@@ -9965,7 +9965,7 @@
  COLONIZABLE_NO_VALID_SPECIES: "§RNo valid species to colonize.§!"
  COLONIZABLE_DESC:0 "Habitable:\nThis planet can be colonized by us: "
  COLONIZABLE_UNSURVEYED_REVEAL_DATA:0 "§Hเราจำเป็นต้องสำรวจดาวเคราะห์ดวงนี้เพื่อได้รับข้อมูลโดยละเอียด§!"
- HABITABLE_DESC:0 "Habitable:\nWe currently cannot colonize this world."
+ HABITABLE_DESC:0 "สามารถอาศัยอยู่ได้:\nขณะนี้เราไม่สามารถตั้งอาณานิคมที่ดาวนี้ได้"
  COLONIZABLE_FEDERATION:0 "§RRequires colonization access from our Federation President.§!"
  SEND_SHIP:0 "ส่งยานอาณานิคมมาที่นี่เพื่อสร้างอาณานิคม"
  UNINHABITABLE:0 "ไม่สามารถอาศัยได้"
@@ -12297,8 +12297,8 @@
  RESYNC_OOS: "Resync"
  RESYNC_OOS_TOOLTIP_SERVER: "Send a resync request to all players"
  RESYNC_OOS_TOOLTIP_CLIENT: "Wait for the server to send a resync request"
- MOD_VERSION:0 "Mod v0.73.1, Update 16/05/2024"
- MOD_DEV_MSG:0 "ผู้พัฒนา: §R*ตอนนี้ม็อดยังเป็นเวอร์ชัน Alpha อยู่นะครับ คำศัพท์ยังไม่ค่อยนิ่ง หากมีการเปลี่ยนแปลงคำสำคัญจะแจ้งให้ทราบอีกครั้ง§!\n\n§Bคำที่เปลี่ยนมีดังนี้:\n - n/a \n§!\n\n§Hกรอบการทำงาน เป้าหมาย และ ลำดับความสำคัญ§!\n §E1.DLC ที่รองรับ§! :  Utopia, Synthetic Dawn, Apocalypse, MegaCorp, Federations, Nemesis, Leviathans, Distant Stars, Ancient Relics, Galactic Paragons, Overlord \n §E2. หลักเกณฑ์การทับศัพท์§! : ราชบัณฑิตยสภา \n §E3. ลำดับความสำคัญในการแปล(เรียงจากมากไปน้อย)§! : (interface/ui) -> (modifier/effect) -> (tutorial) -> (description) -> (event/message)\n\n§Hแหล่งข้อมูลและแรงบันดาลใจ§!\n §E1.หนังสือ:§! เซเปียนส์-ประวัติย่อมนุษยชาติ, โฮโมดีอุส-ประวัติย่อของวันพรุ่งนี้, ยูโทเปีย-มหานครในฝัน, หนึ่ง-เก้า-แปด-สี่ : 1984, หนังสือเรียนวิชาฟิสิกส์, เคมี, ชีว เบื้องต้นสมัยเรียนมหาลัย, วิชาปรัชญาเบื้องต้น, The Matrix and Philosophy: Welcome to the Desert of the Real\n §E2.สารคดี:§! ช่องยูทูป SCIWAYS, GrandMaster TV, คนใฝ่รู้ [Studios], eduHUB, ชีวิตสดใส, คนช่างสงสัย Curiosity Channel, อาจวรงค์ จันทมาศ, Matrix Explained, Kurzgesagt, ZogZag Story, TechOffside, One To Many - A Brief Science\n §E3.บันเทิงคดี:§! The Matrix 1-3 + The Animatrix, Interstellar, 2001: A Space Odyssey, DUNE, Avatar, Star Wars, WALL-E, Star Trek, Inception, Transcendence, Predator, All Tomorrows\n §E4.เอกสาร:§! หลักเกณฑ์การทับศัพท์ภาษาอังกฤษราชบัณฑิตยสภา\n\n§Hเครื่องมือที่ใช้สร้างม็อดมีดังนี้§!\nLocalisation-Manager(Stellaris), Localisation-Editor, MadeeAI Translator"
+ MOD_VERSION:0 "Mod v0.73.2, Update 23/05/2024"
+ MOD_DEV_MSG:0 "ผู้พัฒนา: §R*ตอนนี้ม็อดยังเป็นเวอร์ชัน Alpha อยู่นะครับ คำศัพท์ยังไม่ค่อยนิ่ง หากมีการเปลี่ยนแปลงคำสำคัญจะแจ้งให้ทราบอีกครั้ง§!\n\n§Bคำที่เปลี่ยนมีดังนี้:\n - Arc Furnace -> เตาหลอมอาร์ก\n - Synaptic Lathe -> เครื่องกลึงไซแน็ปติก\n - Dyson Swarm -> ฝูงไดสัน\n - Horizon Needle -> เข็มฮอร์ริซอน \n§!\n\n§Hกรอบการทำงาน เป้าหมาย และ ลำดับความสำคัญ§!\n §E1.DLC ที่รองรับ§! :  Utopia, Synthetic Dawn, Apocalypse, MegaCorp, Federations, Nemesis, Leviathans, Distant Stars, Ancient Relics, Galactic Paragons, Overlord \n §E2. หลักเกณฑ์การทับศัพท์§! : ราชบัณฑิตยสภา \n §E3. ลำดับความสำคัญในการแปล(เรียงจากมากไปน้อย)§! : (interface/ui) -> (modifier/effect) -> (tutorial) -> (description) -> (event/message)\n\n§Hแหล่งข้อมูลและแรงบันดาลใจ§!\n §E1.หนังสือ:§! เซเปียนส์-ประวัติย่อมนุษยชาติ, โฮโมดีอุส-ประวัติย่อของวันพรุ่งนี้, ยูโทเปีย-มหานครในฝัน, หนึ่ง-เก้า-แปด-สี่ : 1984, หนังสือเรียนวิชาฟิสิกส์, เคมี, ชีว เบื้องต้นสมัยเรียนมหาลัย, วิชาปรัชญาเบื้องต้น, The Matrix and Philosophy: Welcome to the Desert of the Real\n §E2.สารคดี:§! ช่องยูทูป SCIWAYS, GrandMaster TV, คนใฝ่รู้ [Studios], eduHUB, ชีวิตสดใส, คนช่างสงสัย Curiosity Channel, อาจวรงค์ จันทมาศ, Matrix Explained, Kurzgesagt, ZogZag Story, TechOffside, One To Many - A Brief Science\n §E3.บันเทิงคดี:§! The Matrix 1-3 + The Animatrix, Interstellar, 2001: A Space Odyssey, DUNE, Avatar, Star Wars, WALL-E, Star Trek, Inception, Transcendence, Predator, All Tomorrows\n §E4.เอกสาร:§! หลักเกณฑ์การทับศัพท์ภาษาอังกฤษราชบัณฑิตยสภา\n\n§Hเครื่องมือที่ใช้สร้างม็อดมีดังนี้§!\nLocalisation-Manager(Stellaris), Localisation-Editor, MadeeAI Translator"
  MOD_SUPPORTERS:0 "ผู้สนับสนุน: n/a"
  MOD_TEST1DUMMY1:0 "dummy1"
  MOD_TEST2DUMMY2:0 "dummy2"
