--- a/mod/thmod/localisation/english/machine_age_situations_2_l_english.yml
+++ b/mod/thmod/localisation/english/machine_age_situations_2_l_english.yml
@@ -26,9 +26,9 @@
  mechanical_pops: "$mechanical_pop$s"
  pop_is: "is"
  pops_are: "are"
- building_identity_complex: "Identity Complex"
+ building_identity_complex: "ศูนย์วิจัยและพัฒนาตัวตนครบวงจร"
  building_identity_complex_desc: "A cutting-edge hub for the research and development of synthetic identities."
- building_identity_complex_speed: "+1 £pop£ Pop"
+ building_identity_complex_speed: "£pop£ ประชากร +1"
  building_identity_complex_effect_desc: "$building_identity_complex_speed$ uploaded per month."
  building_ai_emporium: "AI Emporium"
  building_ai_emporium_desc: "The one stop mega-complex for all your Artificial Intelligence needs. Have sentient AIs transform ordinary objects into smart companions for your family or business. AI a bit too self-aware for its own good? Bring it here and our skilled technicians will reset it faster than the speed of sublight."
@@ -37,14 +37,14 @@
  clear_thought_clinic_modifier: "$building_clear_thought_clinic$"
  clear_thought_clinic_tt: "Non-Stacking Spy Network Modifier: $TABBED_NEW_LINE$$MOD_SPY_NETWORK_DAILY_VALUE_MULT$: §G+25%§! $TABBED_NEW_LINE$$MOD_SPY_NETWORK_LEVELS_ADD$: §G+10§!"
  m_pop_assembly: "£mod_planet_pop_assembly_add£ §Y$MOD_PLANET_POP_ASSEMBLY_ADD$§!"
- job_identity_designer: "Identity Designer"
- job_identity_designer_plural: "Identity Designers"
+ job_identity_designer: "นักออกแบบตัวตน"
+ job_identity_designer_plural: "นักออกแบบตัวตน"
  job_identity_designer_plural_with_icon: "£job_identity_designer£ $job_identity_designer_plural$"
  job_identity_designer_converter_desc: "$job_identity_designer_plural$ facilitate the conversion from a biological form to a digital identity, ensuring a pain-free transition process."
- job_identity_designer_converter_effect_desc: "$job_identity_designer_plural_with_icon$ provide $i_engineering$ and $i_amenities$"
+ job_identity_designer_converter_effect_desc: "$job_identity_designer_plural_with_icon$ ให้ $i_engineering$ และ $i_amenities$"
  job_identity_designer_desc: "$job_identity_designer_plural$ intricately create new synthetic minds."
  job_identity_designer_effect_desc: "$job_identity_designer_plural_with_icon$ provide $i_engineering$, $i_amenities$, and empire-wide $m_pop_assembly$"
- mod_job_identity_designer_add: "$job_identity_designer$ Jobs"
+ mod_job_identity_designer_add: "งาน $job_identity_designer$"
  job_roboticist_plural_and_job_identity_designer_plural: "$job_roboticist_plural$ และ $job_identity_designer_plural$"
  job_roboticist_plural_with_icon_and_job_identity_designer_plural_with_icon: "$job_roboticist_plural_with_icon$ และ $job_identity_designer_plural_with_icon$"
  councilor_ruler_imperial_synth: "$imperial_ruler$"
@@ -133,13 +133,13 @@
  d_biological_enclaves_custom_tooltip: "§Y[Owner.GetNumSynthOpposition] [Owner.GetMechanicalPopOrPops]§! created"
  policy_synthetic_identities_policy: "Synthetic Identities"
  policy_synthetic_identities_policy_desc: "New synthetic identities must be created for us to multiply."
- identity_copy_name: "Identity Copies"
+ identity_copy_name: "ทำสำเนาตัวตน"
  identity_copy: "$identity_copy_name$"
  identity_copy_desc: "$tech_identity_copy_desc$\n\nThe copies experience only mild gloom from their lack of uniqueness.\n\n$TECH_UNLOCK_IDENTITY_COPY_DESC$\n\n§E$identity_copy_name$ $can_enable_mind_creation$§!"
- identity_fusion_name: "Identity Fusion"
+ identity_fusion_name: "หลอมรวมตัวตน"
  identity_fusion: "$identity_fusion_name$"
  identity_fusion_desc: "$tech_identity_fusion_desc$\n\n$TECH_UNLOCK_IDENTITY_FUSION_DESC$\n\n§E$identity_fusion_name$ $can_enable_mind_creation$§!"
- identity_initialization_name: "Identity Initialization"
+ identity_initialization_name: "เริ่มกระบวนการสร้างตัวตน"
  identity_initialization: "$identity_initialization_name$"
  identity_initialization_desc: "$tech_identity_initialization_desc$\n\n$TECH_UNLOCK_IDENTITY_INITIALIZATION_DESC$\n\n§E$identity_initialization_name$ $can_enable_mind_creation$§!"
  can_enable_mind_creation: "is used when assembling Synthetics"
@@ -158,17 +158,17 @@
  computation_core_research: "$computation_core_research_name$"
  computation_core_research_desc: "Designate additional processing cycles to performance intensive research servers.$computation_core_research_tt$"
  computation_core_research_tt: "\n\n$EFFECTS_HEADER$ $NEW_LINE$- Each £job_clerk£ $job_clerk$ increases §Y$r_research$ from Jobs§! by §G+0.5%§! $computation_core_trade$"
- tech_identity_copy: "Identity Copies"
+ tech_identity_copy: "การทำสำเนาตัวตน"
  tech_identity_copy_desc: "We will be able to copy the identity and memories of a Synthetic into a new mechanical body. The copies have predictable skill sets but make for stale conversation."
- TECH_UNLOCK_IDENTITY_COPY_TITLE: "Grants access to policy:$TABBED_NEW_LINE$§H$policy_synthetic_identities_policy$§! - $identity_copy_name$"
+ TECH_UNLOCK_IDENTITY_COPY_TITLE: "สามารถเข้าถึงนโยบาย:$TABBED_NEW_LINE$§H$policy_synthetic_identities_policy$§! - $identity_copy_name$"
  TECH_UNLOCK_IDENTITY_COPY_DESC: "§H$mechanical_pops$§!$TABBED_NEW_LINE$Happiness: §R-5%§!"
- tech_identity_fusion: "Identity Fusion"
+ tech_identity_fusion: "การหลอมรวมตัวตน"
  tech_identity_fusion_desc: "Merging the identities and memories of two or more Synthetics into a mechanical body will create new, somewhat unique individuals."
- TECH_UNLOCK_IDENTITY_FUSION_TITLE: "Grants access to policy:$TABBED_NEW_LINE$§H$policy_synthetic_identities_policy$§! - $identity_fusion_name$"
+ TECH_UNLOCK_IDENTITY_FUSION_TITLE: "สามารถเข้าถึงนโยบาย:$TABBED_NEW_LINE$§H$policy_synthetic_identities_policy$§! - $identity_fusion_name$"
  TECH_UNLOCK_IDENTITY_FUSION_DESC: "§H$mechanical_pops$§!$TABBED_NEW_LINE$Assembly Cost: §R+10%§!"
- tech_identity_initialization: "Identity Initialization"
+ tech_identity_initialization: "การเริ่มกระบวนการสร้างตัวตน"
  tech_identity_initialization_desc: "We will be able to initialize an identity kernel and provide it with a virtual childhood. While expensive, we can simulate the optimal experiences to generate productive personalities."
- TECH_UNLOCK_IDENTITY_INITIALIZATION_TITLE: "Grants access to policy:$TABBED_NEW_LINE$§H$policy_synthetic_identities_policy$§! - $identity_initialization_name$"
+ TECH_UNLOCK_IDENTITY_INITIALIZATION_TITLE: "สามารถเข้าถึงนโยบาย:$TABBED_NEW_LINE$§H$policy_synthetic_identities_policy$§! - $identity_initialization_name$"
  TECH_UNLOCK_IDENTITY_INITIALIZATION_DESC: "§H$mechanical_pops$§!$TABBED_NEW_LINE$Happiness: §G+5%§!$TABBED_NEW_LINE$Resources from £pop£ Jobs: §G+5%§!$TABBED_NEW_LINE$Assembly Cost: §R+20%§!"
  synth.100.name: "Booting Up"
  synth.100.desc: "The time has come to cast off our biological form, to ascend into alloy and electricity. With cutting-edge bodies and accelerated minds we will march into the future. The [Owner.Species.GetFleshTypeCyberCreed] is fallible, but a machine can be perfected.\n\nHowever, the transition will not be easy. The research community requires at least one $building_identity_complex$ to act as a hub for synthetic development. Our destiny awaits."
@@ -228,7 +228,7 @@
  synth.260.b.tt: "§Y$situation_digitization$§! situation progress speed for §Y1§! year: §R-25%§!"
  situation_test_subject_lottery_tt: "Test Subject Lottery"
  synth.260.c: "Find volunteers by force if necessary."
- synth.300.name: "Mass Identity Upload"
+ synth.300.name: "อัปโหลดตัวตนจำนวนมาก"
  synth.300.desc: "All across our territory, in every major urban center, we have installed synthesization booths that now stand ready to receive our [owner.species.GetName] population. The digital identity patterns designed by $job_identity_designer_plural$ promise a one-to-one correspondence with the biological original.\n\nThe day is finally here to cast off our biological past and embrace a synthetic future."
  synth.300.a: "Synthesize!"
  synth.300.a.resistance.tt: "$unlock_edict_tt$ ['concept_edict_subsidized_identity_backups']\n\nMoves §Y[Owner.GetNumSynthOpposition] [Owner.GetBiologicalPopOrPops]§! to §Y$d_biological_enclaves$§! on [root.owner.capital_scope.GetName]\nClearing the blocker returns §Y[Owner.GetNumSynthOpposition] [Owner.GetMechanicalPopOrPops]§!\n\n§Y$synth_mass_demonstrations$§! modifier removed from [root.owner.capital_scope.GetName]\n\nSynthesization speed depends on the situation approach and the number of robot assembly buildings."
@@ -333,11 +333,11 @@
  concept_auth_synth_corporate_virtual: "$auth_synth_corporate_virtual$"
  gov_synth_corporate_virtual: "$auth_synth_corporate_virtual$"
  gov_synth_corporate_virtual_desc: "$auth_synth_corporate_virtual_desc$"
- edict_subsidized_identity_backups: "Subsidized Identity Backups"
+ edict_subsidized_identity_backups: "สำรองข้อมูลตัวตนที่ได้รับการสนับสนุน"
  edict_subsidized_identity_backups_desc: "The government provides the immense amount of server space required for continuous identity backups."
  edict_subsidized_identity_backups_effect: "$MOD_LEADER_LIFESPAN_ADD$: §G+20 Years§!\n$MOD_LEADER_SPECIES_EXP_GAIN$: §G+10%§!"
  concept_edict_subsidized_identity_backups: "$edict_subsidized_identity_backups$"
- edict_optimized_identity_creation: "Optimized Identity Creation"
+ edict_optimized_identity_creation: "สร้างตัวตนให้เหมาะสมที่สุด"
  edict_optimized_identity_creation_desc: "Advanced personality algorithms and core memory compression techniques improve our identity generation velocity."
  concept_edict_optimized_identity_creation: "$edict_optimized_identity_creation$"
  synth.social_consequences.tt: "Influences the ongoing §YSynthetic Society Shift§!.\n\n"
