--- a/mod/thmod/localisation/english/megacorp_l_english.yml
+++ b/mod/thmod/localisation/english/megacorp_l_english.yml
@@ -1533,9 +1533,9 @@
  mod_planet_pops_cyborgs_upkeep_mult:0 "ค่าบำรุงรักษาไซบอร์ก"
  mod_planet_pops_lithoid_unity_upkeep_add:0 "Lithoid Pop Unity Upkeep"
  mod_planet_pops_biological_unity_upkeep_add:0 "Biological Pop Unity Upkeep"
- mod_planet_pop_assemblers_unity_produces_add: "£unity£ $unity$ from [GetPopAssemblersPluralWithIcon]"
- mod_planet_pop_assemblers_upkeep_mult:1 "[GetPopAssemblersPlural] Upkeep"
- mod_planet_pop_assemblers_energy_upkeep_add:2 "[GetPopAssemblersPlural] $r_energy$ Upkeep"
+ mod_planet_pop_assemblers_unity_produces_add: "£unity£ $unity$ จาก [GetPopAssemblersPluralWithIcon]"
+ mod_planet_pop_assemblers_upkeep_mult:1 "ค่าบำรุงรักษา [GetPopAssemblersPlural]"
+ mod_planet_pop_assemblers_energy_upkeep_add:2 "ค่าบำรุงรักษา [GetPopAssemblersPlural] $r_energy$"
  mod_planet_pop_assemblers_sr_living_metal_upkeep_add: "§Y[GetPopAssemblersPluralWithIcon]§! £sr_living_metal£ $sr_living_metal$ Upkeep"
  mod_planet_jobs_slave_produces_mult:1 "ประชากร$pop_cat_slave$ให้ผลผลิตที่เป็นทรัพยากร"
  mod_planet_jobs_worker_produces_mult:3 "ผลผลิตทรัพยากรจากประชากร [GetWorker]"
@@ -1579,7 +1579,7 @@
  mod_country_sr_zro_produces_mult:0 "$sr_zro$ รายเดือน"
  mod_country_consumer_goods_produces_mult:0 "$consumer_goods$รายเดือน"
  mod_country_consumer_goods_produces_add:0 "$mod_country_consumer_goods_produces_mult$"
- mod_country_astral_threads_produces_mult:0 "Monthly $astral_threads$"
+ mod_country_astral_threads_produces_mult:0 "$astral_threads$ รายเดือน"
  mod_country_base_astral_threads_produces_add:0 "$mod_country_astral_threads_produces_mult$"
  mod_planet_pops_consumer_goods_upkeep_mult:0 "ค่าบำรุงรักษาประชากรที่เป็น$consumer_goods$"
  mod_planet_branch_office_buildings_produces_mult:0 "ทรัพยากรจาก $BRANCH_OFFICE_BUILDINGS$"
@@ -1646,7 +1646,7 @@
  mod_planet_technician_physics_research_produces_add: "$mod_planet_technician_physics_research_produces_mult$"
  mod_planet_technician_engineering_research_produces_mult: "£engineering£ $engineering_research$ จาก £job_technician£ [GetTechnicianPlural]"
  mod_planet_researchers_energy_upkeep_add:0 "£energy£ $energy$ ที่เป็นค่าบำรุงรักษาของ £job_researcher£ [GetResearcherPlural]"
- mod_planet_researchers_alloys_upkeep_add: "£alloys£ $alloys$ Upkeep of £job_researcher£ [GetResearcherPlural]"
+ mod_planet_researchers_alloys_upkeep_add: "£alloys£ $alloys$ ค่าบำรุงรักษาของ £job_researcher£ [GetResearcherPlural]"
  mod_planet_researchers_physics_research_produces_mult:1 "£physics£ $physics_research$จาก £job_researcher£ [GetResearcherPlural]"
  mod_planet_researchers_physics_research_produces_add:0 "$mod_planet_researchers_physics_research_produces_mult$"
  mod_planet_researchers_engineering_research_produces_mult:1 "£engineering£ $engineering_research$จาก £job_researcher£ [GetResearcherPlural]"
@@ -1677,11 +1677,11 @@
  mod_planet_administrators_produces_mult:1 "ผลิตผล [GetAdministratorWithIcon]"
  mod_planet_administrators_produces_add:0 "$mod_planet_administrators_produces_mult$"
  mod_planet_administrators_unity_produces_mult:1 "£unity£ $unity$ จาก [GetAdministratorPluralWithIcon]"
- mod_planet_administrators_unity_produces_add:1 "£unity£ $unity$ from [GetAdministratorPluralWithIcon]"
+ mod_planet_administrators_unity_produces_add:1 "£unity£ $unity$ จาก [GetAdministratorPluralWithIcon]"
  mod_planet_administrators_upkeep_mult:1 "ค่าบำรุงรักษา [GetAdministratorWithIcon]"
- mod_planet_priests_unity_produces_add:0 "£unity£ $unity$ from [GetPriestIcon] [GetPriestPlural]"
- mod_planet_priests_physics_research_produces_add: "£physics£ $physics_research$ from [GetPriestIcon] [GetPriest]"
- mod_planet_priests_engineering_research_produces_add: "£engineering£ $engineering_research$ from [GetPriestIcon] [GetPriest]"
+ mod_planet_priests_unity_produces_add:0 "£unity£ $unity$ จาก [GetPriestIcon] [GetPriestPlural]"
+ mod_planet_priests_physics_research_produces_add: "£physics£ $physics_research$ จาก [GetPriestIcon] [GetPriest]"
+ mod_planet_priests_engineering_research_produces_add: "£engineering£ $engineering_research$ จาก [GetPriestIcon] [GetPriest]"
  mod_planet_managers_unity_produces_add:0 "£unity£ $unity$ จาก £job_manager£ $job_manager_plural$"
  mod_planet_merchants_unity_produces_add:0 "£unity£ $unity$ จาก £job_merchant£ $job_merchant_plural$"
  mod_planet_enforcers_unity_produces_add:0 "£unity£ $unity$ จาก £job_enforcer£ $job_enforcer_plural$"
@@ -1692,7 +1692,7 @@
  mod_planet_entertainers_produces_mult:0 "ทรัพยากรจาก [GetEntertainerPluralWithIcon]"
  mod_planet_entertainers_unity_produces_add:0 "£unity£ $unity$ จาก [GetEntertainerPluralWithIcon]"
  mod_planet_doctors_unity_produces_add: "£unity£ $unity$ จาก £job_healthcare£ $job_healthcare_plural$"
- mod_planet_entertainers_engineering_research_produces_add: "£engineering£ $engineering_research$ from [GetEntertainerPluralWithIcon]"
+ mod_planet_entertainers_engineering_research_produces_add: "£engineering£ $engineering_research$ จาก [GetEntertainerPluralWithIcon]"
  mod_station_gatherers_produces_mult:0 "ผลผลิตของสถานีเหมืองแร่"
  mod_station_researchers_produces_mult:0 "ผลผลิตของสถานีวิจัย"
  MOD_COUNTRY_ADMIN_CAP_ADD:1 "ความสามารถในการบริหาร"
@@ -1852,7 +1852,7 @@
  building_spawning_pool_desc:1 "Tended by the scientific and gentle care of specialists, these pools stimulate our spawn into faster growth."
  building_robot_assembly_plant:0 "โรงประกอบหุ่นยนต์"
  building_robot_assembly_plant_desc:0 "High-tech factories where skilled Roboticists assemble the latest robot models."
- building_robot_assembly_complex:0 "ศูนย์ประกอบหุ่นยนต์ซับซ้อน"
+ building_robot_assembly_complex:0 "ศูนย์ประกอบหุ่นยนต์ครบวงจร"
  building_robot_assembly_complex_desc:0 "An advanced assembly plant where skilled Roboticists assemble the latest robot models."
  building_machine_assembly_plant:0 "โรงงานประกอบเครื่องจักร"
  building_machine_assembly_plant_desc:1 "A production line assembly plant where new units are constructed."
@@ -2014,11 +2014,11 @@
  d_boggy_fens_desc:1 "These low-lying wetlands provide a wealth of plant nutrients."
  d_lush_jungle:0 "Lush Jungle"
  d_lush_jungle_desc:1 "With a dense canopy and nigh-impenetrable vegetation density, these jungles are poor in soil quality, but rich in plant life and fruit-bearing trees."
- d_lichen_fields:0 "Lichen Fields"
+ d_lichen_fields:0 "ทุ่งไลเคน"
  d_lichen_fields_desc:1 "Dewy moss, lichens and fungi form a plush carpet that stretches across these rocky lands."
- d_fungal_caves:0 "Fungal Caves"
+ d_fungal_caves:0 "ถ้ำเชื้อรา,เห็ด"
  d_fungal_caves_desc:1 "These extensive cave networks are covered in many species of edible fungi, which require neither sunlight nor fertile soil to flourish."
- d_fungal_forest:0 "Fungal Forest"
+ d_fungal_forest:0 "ป่าเชื้อรา,เห็ด"
  d_fungal_forest_desc:1 "In lieu of trees, towering mushrooms dominate these fecund forests, the enormous caps of fungal giants blotting out sunlight to create the perfect environment for a rich variety of smaller specimens."
  d_fertile_lands:0 "Fertile Lands"
  d_fertile_lands_desc:1 "This vast stretch of open plains provides ideal farmland."
