--- a/mod/thmod/localisation/english/modifiers_2_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_2_l_english.yml
@@ -3,7 +3,7 @@
  rock_brain_desc:0 "The stone seems to be... thinking. Is such a thing possible?"
  cunning_flora:0 "Cunning Flora"
  cunning_flora_desc:0 "Plants on this planet exhibit both extreme aggression and a relatively complex social order."
- genetic_library:0 "Abandoned Genetic Library"
+ genetic_library:0 "ห้องเก็บข้อมูลพันธุกรรมที่ถูกทิ้งร้าง"
  genetic_library_desc:0 "Both the structure and contents of the abandoned genetic library are rewarding subjects of study."
  drone_space_elevator:0 "Inconvenient Space Elevator"
  drone_space_elevator_desc:0 "Efforts to demolish a gigantic space elevator slows down production on this planet."
