--- a/mod/thmod/localisation/english/nemesis_crisis_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_crisis_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
- ap_become_the_crisis:1 "Galactic Nemesis"
+ ap_become_the_crisis:1 "กาแล็กติกเนเมซิส"
  ap_become_the_crisis_desc:1 "ผลงานที่ยิ่งใหญ่ล้วนแต่ต้องการความเสียสละ พวกอื่นๆในกาแล็กซีอาจไม่เข้าใจ แต่พวกเขาจะเชื่อฟังและปฏิบัติตาม"
  menace_name:1 "$menace$:"
  crisis_path_destruction_name:0 "Path of Destruction"
@@ -47,8 +47,8 @@
  crisis_perk_destruction:0 "$crisis_path_destruction_name$ $crisis_perks$"
  crisis_perk_supremacy:0 "$crisis_path_supremacy_name$ $crisis_perks$"
  crisis_perk_deception:0 "$crisis_path_deception_name$ $crisis_perks$"
- crisis_perk_to_unlock:0 "To Unlock:"
- crisis_perk_passive_effect:0 "Passive Effect:"
+ crisis_perk_to_unlock:0 "เพื่อปลดล็อก:"
+ crisis_perk_passive_effect:0 "เอฟเฟกต์ติดตัว:"
  crisis_perk_active_effect:0 "เอฟเฟกต์เมื่อใช้งาน:"
  crisis_perks_supremacy_privateering_title:0 "Privateering"
  crisis_perks_supremacy_privateering_desc:0 "Attack them ourselves?! Oh, please - We have people who do that for us."
@@ -92,7 +92,7 @@
  menace_crisis_level_desc: "To advance through the Crisis levels, complete Crisis Objectives and research the Crisis Special Projects in the Situation Log"
  menace_crisis_level_unlock: "Has £menace£ §Y$CURRENCY$§! Menace"
  menace_current_value: "Current Value: §Y$VALUE|0$§!"
- menace_crisis_description_title: "Galactic Nemesis"
+ menace_crisis_description_title: "กาแล็กติกเนเมซิส"
  menace_crisis_description_intro: "Those in the galactic community who chart the arc of history have long predicted a coming §RCrisis§! - an existential threat to all sapient life which would require unprecedented unity of purpose, and sacrifice, to overcome. If it can be overcome at all.\n\nPopular predictions as to the nature of this crisis have been as fanciful as the invasion of an extragalactic glutton, or the galaxy's machine intelligences rising up in petty rebellion, or a war of succession spilling over from another plane of existence, but...\n\nIt is now clear that it was always going to be §Rus§!."
  menace_crisis_description: "$menace_crisis_description_intro$\n\nOur actions have echoes in another dimension, one of limitless energy. We need only discover how to harness this power in order to bring the galaxy to heel."
  menace_crisis_howto_title: "Menace & Engine"
