--- a/mod/thmod/localisation/english/overlord_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_l_english.yml
@@ -435,9 +435,9 @@
  civic_barbaric_despoilers_ove_desc:0 "$civic_barbaric_despoilers_desc$"
  civic_warrior_culture_ove:0 "$civic_warrior_culture$"
  civic_warrior_culture_ove_desc:0 "$civic_warrior_culture_desc$"
- ap_lord_of_war:0 "Lord of War"
- ap_lord_of_war_desc:0 "Some say war is bad for business, but war is our business. Our mercenaries thrive in an embattled galaxy, and through them, so will we."
- ap_lord_of_war_tooltip:0 "§YMercenary Enclaves§! under our patronage pay more frequent §YDividends§!."
+ ap_lord_of_war:0 "เจ้าแห่งสงคราม"
+ ap_lord_of_war_desc:0 "บางคนบอกว่าสงครามไม่ดีต่อธุรกิจ แต่สงครามคือธุรกิจของเรา ทหารรับจ้างของเราจะเจริญรุ่งเรืองในกาแล็กซีที่มีสงครามโดยผ่านพวกเขาและเราก็จะทำเช่นนั้นเช่นกัน"
+ ap_lord_of_war_tooltip:0 "§Yทหารรับจ้าง Enclave§! ภายใต้การอุปถัมภ์ของเราจ่ายเงิน §Yปันผล§! บ่อยขึ้น"
  NAME_Auge:0 "Auge"
  NAME_Anatole:0 "Anatole"
  NAME_Mousika:0 "Mousika"
