--- a/mod/thmod/localisation/english/overlord_mega_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_mega_l_english.yml
@@ -210,7 +210,7 @@
  relay_network_amenities_gestalt_edict_modifier:0 "$edict_relay_network_amenities$"
  RELAY_NETWORK_EFFECTS:0 "§Yเอฟเฟกต์เครือข่ายไฮเปอร์รีเลย์:§!"
  megastructures_hyper_relay:0 "$hyper_relay_plural$"
- mod_megastructures_hyper_relay_volatile_motes_upkeep_add:1 "£volatile_motes£ $volatile_motes$ Upkeep of $hyper_relay_plural$"
- mod_megastructures_hyper_relay_exotic_gases_upkeep_add:0 "£exotic_gases£ $exotic_gases$ Upkeep of $hyper_relay_plural$"
- mod_megastructures_hyper_relay_rare_crystals_upkeep_add:0 "£rare_crystals£ $rare_crystals$ Upkeep of $hyper_relay_plural$"
+ mod_megastructures_hyper_relay_volatile_motes_upkeep_add:1 "£volatile_motes£ $volatile_motes$ ค่าบำรุงรักษาของ $hyper_relay_plural$"
+ mod_megastructures_hyper_relay_exotic_gases_upkeep_add:0 "£exotic_gases£ $exotic_gases$ ค่าบำรุงรักษาของ $hyper_relay_plural$"
+ mod_megastructures_hyper_relay_rare_crystals_upkeep_add:0 "£rare_crystals£ $rare_crystals$ ค่าบำรุงรักษาของ $hyper_relay_plural$"
  mod_megastructures_hyper_relay_unity_produces_add:0 "£unity£ เอกภาพจาก §Y$hyper_relay_plural$§! ต่อเดือน"
