--- a/mod/thmod/localisation/english/paragon_2_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_2_l_english.yml
@@ -644,12 +644,12 @@
  mod_leader_scientists_cost_mult:2 "$scientist_with_icon$ Cost"
  mod_leader_governors_cost_mult:2 "$governor_with_icon$ Cost"
  mod_leader_officials_cost_mult: "$official_with_icon$ Cost"
- mod_leader_commanders_upkeep_mult: "$commander_with_icon$ Upkeep"
- mod_leader_admirals_upkeep_mult:2 "$admiral_with_icon$ Upkeep"
- mod_leader_generals_upkeep_mult:2 "$general_with_icon$ Upkeep"
- mod_leader_scientists_upkeep_mult:2 "$scientist_with_icon$ Upkeep"
- mod_leader_governors_upkeep_mult:2 "$governor_with_icon$ Upkeep"
- mod_leader_officials_upkeep_mult:2 "$official_with_icon$ Upkeep"
+ mod_leader_commanders_upkeep_mult: "ค่าบำรุงรักษา $commander_with_icon$"
+ mod_leader_admirals_upkeep_mult:2 "ค่าบำรุงรักษา $admiral_with_icon$"
+ mod_leader_generals_upkeep_mult:2 "ค่าบำรุงรักษา $general_with_icon$"
+ mod_leader_scientists_upkeep_mult:2 "ค่าบำรุงรักษา $scientist_with_icon$"
+ mod_leader_governors_upkeep_mult:2 "ค่าบำรุงรักษา $governor_with_icon$"
+ mod_leader_officials_upkeep_mult:2 "ค่าบำรุงรักษา $official_with_icon$"
  LEADER_UPKEEP:0 "$VALUE$"
  LEADER_UPKEEP_WITH_TEXT:0 "ค่าบำรุงรักษา/ค่าตอบแทน: $VALUE$"
  LEADER_COST:1 "ค่าใช้จ่าย: $VALUE|Y$"
@@ -1415,8 +1415,8 @@
  mod_country_councilor_physics_research_produces_add:0 "$mod_leader_scientists_physics_research_produces_add$"
  mod_country_councilor_society_research_produces_add:0 "$mod_leader_scientists_society_research_produces_add$"
  mod_country_councilor_engineering_research_produces_add:0 "$mod_leader_scientists_engineering_research_produces_add$"
- mod_planet_priests_society_research_produces_add:0 "£society£ $society_research$ from [GetPriestIcon] [GetPriest]"
- mod_planet_pop_assemblers_engineering_research_produces_add:1 "$r_engineering$ from [GetPopAssemblersPlural]"
+ mod_planet_priests_society_research_produces_add:0 "£society£ $society_research$ จาก [GetPriestIcon] [GetPriest]"
+ mod_planet_pop_assemblers_engineering_research_produces_add:1 "$r_engineering$ จาก [GetPopAssemblersPlural]"
  paragon_2.2005.name:0 "Uncovered Hidden Resources"
  paragon_2.2005.desc:0 "[Root.Leader.GetTitle] §Y[Root.Leader.GetName]§!'s experience as a §YProspector§! has helped uncover resources hidden on the surface of §Y[From.GetName]§!. We can construct mining stations in orbit to exploit this discovery."
  paragon_2.2010.name:0 "$paragon_2.2005.name$"
