--- a/mod/thmod/localisation/english/traditions_l_english.yml
+++ b/mod/thmod/localisation/english/traditions_l_english.yml
@@ -610,9 +610,9 @@
  REQUIRES_CYBORG_EMPIRE:1 "$TRIGGER_FAIL$Has finished the §Y[GetCyberSituation]§! situation"
  REQUIRES_CYBORG_EMPIRE_UTOPIA: "$TRIGGER_FAIL$Has completed §Y$FLESH_IS_WEAK_PROJECT$§! special project"
  mod_planet_cyborg_jobs_produces_mult:0 "ทรัพยากรจากประชากรไซบอร์ก"
- mod_planet_cyborg_jobs_physics_research_produces_mult: "£physics_research£ $physics_research$ from Cyborg Pops"
- mod_planet_cyborg_jobs_society_research_produces_mult: "£society_research£ $society_research$ from Cyborg Pops"
- mod_planet_cyborg_jobs_engineering_research_produces_mult: "£engineering_research£ $engineering_research$ from Cyborg Pops"
+ mod_planet_cyborg_jobs_physics_research_produces_mult: "£physics_research£ $physics_research$ จากประชากรไซบอร์ก"
+ mod_planet_cyborg_jobs_society_research_produces_mult: "£society_research£ $society_research$ จากประชากรไซบอร์ก"
+ mod_planet_cyborg_jobs_engineering_research_produces_mult: "£engineering_research£ $engineering_research$ จากประชากรไซบอร์ก"
  tradition_cybernetics_assimilator:0 "ไซเบอร์เนติกส์"
  tradition_cybernetics_assimilator_desc:0 "อนาคตของเราอยู่ที่การหลอมรวมของเนื้อหนังและเครื่องจักร"
  tr_cybernetics_assimilator_adopt:0 "วัฒนธรรมไซเบอร์เนติก"
@@ -664,8 +664,8 @@
  tr_synthetics_power_systems_situation_effects: "$tr_synthetics_situation$$mod_planet_pops_robotics_upkeep_mult$: §G-25%§!\n$mod_planet_pop_assemblers_upkeep_mult$: §G-25%§!"
  tr_synthetics_prefabricated_components:0 "ชิ้นส่วนประกอบสำเร็จรูป"
  tr_synthetics_prefabricated_components_delayed: "By shipping standardized components and an assembly instruction, anyone can put their next upgrade together."
- tr_synthetics_prefabricated_components_situation_effects: "$tr_synthetics_situation$ £building£ §YCapital Buildings§! provide §G+1§! £job_roboticist£ §Y$job_roboticist$§! Jobs\n£job_roboticist£ §Y$job_roboticist$§! provide §G+2§! $i_amenities$"
- tr_synthetics_prefabricated_components_effects: "£building£ §YCapital Buildings§! provide §G+1§! £job_roboticist£ §Y$job_roboticist$§! Jobs\n£job_roboticist£ §Y$job_roboticist$§! provide §G+2§! $i_amenities$"
+ tr_synthetics_prefabricated_components_situation_effects: "$tr_synthetics_situation$ £building£ §YCapital Buildings§! ให้งาน £job_roboticist£ §Y$job_roboticist$§! §G+1§!\n£job_roboticist£ §Y$job_roboticist$§! ให้ $i_amenities$ §G+2§!"
+ tr_synthetics_prefabricated_components_effects: "£building£ §Yสิ่งปลูกสร้างที่เป็นเมืองหลวง§! ให้งาน £job_roboticist£ §Y$job_roboticist$§! §G+1§!\n£job_roboticist£ §Y$job_roboticist$§! ให้ §G+2§! $i_amenities$"
  tr_synthetics_prefabricated_components_machine: "$tr_synthetics_prefabricated_components$"
  tr_synthetics_prefabricated_components_machine_delayed: "Having a ready supply of prefabricated components makes it easier to assemble new models."
  tr_synthetics_prefabricated_components_machine_effects: "£building£ §YCapital Buildings§! provide §G+1§! £job_replicator£ §Y$job_replicator$§! Jobs"
@@ -853,7 +853,7 @@
  no_rev_engineering:1 "ปฏิบัติการ §Y$operation_steal_technology$§! จะล้มเหลวโดยอัตโนมัติเมื่อใช้กับพวกเรา\nจักรวรรดิอื่นจะไม่สามารถนำ §Yเศษซากยานรบ§! ของเราที่ถูกทำลาย ไปศึกษาวิจัยได้"
  allow_raiding:0 "ปลดล็อกการทิ้งระเบิดแบบ §Y$bombardment_raiding$§! ซึ่งจะช่วยให้เราสามารถลักพาตัวประชากรจากดาวเคราะห์ที่ถูกปิดล้อมและย้ายประชากรมาที่ดาวของเรา"
  ap_defender_of_the_galaxy_effect_opinion:2 "เพิ่ม £opinion£ §Yทัศนคติ§! ของจักรวรรดิที่สามารถทำกิจกรรมการฑูตแบบปกติได้ §G+200§!"
- ap_defender_of_the_galaxy_modifier_desc:0 "Damage to Endgame Crisis factions: §G+50%§!\n\n$ap_defender_of_the_galaxy_effect_opinion$"
+ ap_defender_of_the_galaxy_modifier_desc:0 "สร้างความเสียหายให้กับฝ่ายไครซิสตอนจบเกม: §G+50%§!\n\n$ap_defender_of_the_galaxy_effect_opinion$"
  ap_engineered_evolution:0 "วิวัฒนาการทางพันธุวิศวกรรม"
  ap_the_flesh_is_weak:0 "ร่างกายเป็นสิ่งที่อ่อนแอ"
  ap_synthetic_evolution:0 "วิวัฒนาการจักรกลสังเคราะห์"
@@ -884,8 +884,8 @@
  ap_mind_over_matter_desc:0 "เพียงเศษเสี้ยวของศักยภาพที่มีอยู่ในจิตใจของเราเท่านั้นได้ถูกปลดล็อกแล้ว ความสามารถในการพลังจิตแฝงของเผ่าพันธุ์เรากำลังเริ่มปรากฏให้เห็นแล้วในบางคน"
  ap_synthetic_age:0 "ยุคจักรกลสังเคราะห์"
  ap_synthetic_age_desc:0 "ยุคของสิ่งมีชีวิตได้มาและผ่านไป อนาคตของกาแลคซีเป็นของเครื่องจักร นี่คือรุ่งอรุณแห่งยุคสังเคราะห์"
- synthetic_age_tooltip:1 "สามารถเข้าถึงวัฒนธรรม §Y$tradition_synthetics$§! ได้\n$UNLOCKS_AGENDA$ $council_agenda_agenda_synthetic_age_name$, ซึ่งให้เทคโนโลยีการดัดแปลงเครื่องจักรให้เป็นทางเลือกในการวิจัยได้"
- synthetic_age_tooltip_machine_age: "Starts the §YTransformation Situation§! which unlocks the §Y$tradition_modularity$§!, §Y$tradition_virtuality$§! or §Y$tradition_nanotech$§! tradition trees.\n$UNLOCKS_AGENDA$ $council_agenda_agenda_synthetic_age_name$, which grants Machine Modification technologies as Research Options."
+ synthetic_age_tooltip:1 "สามารถเข้าถึงวัฒนธรรม §Y$tradition_synthetics$§! ได้\n$UNLOCKS_AGENDA$ $council_agenda_agenda_synthetic_age_name$, ซึ่งจะให้เทคโนโลยีการดัดแปลงเครื่องจักรเป็นทางเลือกในการวิจัย"
+ synthetic_age_tooltip_machine_age: "เริ่ม §Yสถานการณ์การเปลี่ยนแปลง§! ที่จะปลดล็อกวัฒนธรรม §Y$tradition_modularity$§!, §Y$tradition_virtuality$§! หรือ §Y$tradition_nanotech$§!\n$UNLOCKS_AGENDA$ $council_agenda_agenda_synthetic_age_name$, ซึ่งจะให้เทคโนโลยีปรับเปลี่ยนเครื่องจักรให้เป็นทางเลือกในการวิจัย"
  ap_machine_worlds:0 "ดาวเครื่องจักร"
  ap_machine_worlds_desc:0 "เราจะสร้างดาวของเราให้เป็นภาพสะท้อนของตัวเราเองโดยแทนที่ความอ่อนแอของสิ่งมีชีวิตด้วยความสมบูรณ์แบบของโลหะที่ไม่เปลี่ยนรูป"
  ap_hive_worlds:0 "ดาวที่เป็นรัง"
