--- a/mod/thmod/localisation/english/triggers_effects_l_english.yml
+++ b/mod/thmod/localisation/english/triggers_effects_l_english.yml
@@ -653,8 +653,8 @@
  NUM_COMMUNICATIONS_NOT_TRIGGER:0 "Number of communications is NOT $COMPARE$ $VALUE$"
  NUM_FALLEN_EMPIRES_TRIGGER:0 "จำนวนจักรวรรดิฟอลเล็น $COMPARE$ $VALUE$"
  NUM_FALLEN_EMPIRES_NOT_TRIGGER:0 "จำนวนจักรวรรดิฟอลเล็น ไม่$COMPARE$ $VALUE$"
- MONTHLY_INCOME_TRIGGER:0 "Monthly $RESOURCE$ Income is $COMPARE$ $VALUE$"
- MONTHLY_INCOME_NOT_TRIGGER:0 "Monthly $RESOURCE$ Income is NOT $COMPARE$ $VALUE$"
+ MONTHLY_INCOME_TRIGGER:0 "รายได้ $RESOURCE$ ต่อเดือน $COMPARE$ $VALUE$"
+ MONTHLY_INCOME_NOT_TRIGGER:0 "รายได้ $RESOURCE$ ต่อเดือนไม่ $COMPARE$ $VALUE$"
  COUNT_TECH_OPTIONS_TRIGGER:0 "Number of Tech Options is $NOT$$COMPARE$ $VALUE$"
  COUNT_TECH_OPTIONS_AREA_TRIGGER:0 "Number of Tech Options in $AREA$ is $NOT$$COMPARE$ $VALUE$"
  LAST_INCREASED_TECH_TRIGGER:0 "The last increased tech is$NOT$ $TECH$ Level $COMPARE$ $LEVEL$"
@@ -923,12 +923,12 @@
  HAS_TRAIT_ICON_TIP:0 "This option is available due to $WHO|H$ having the $TRAIT|Y$ Trait"
  RESOURCE_STOCKPILED_LESS_THAN:2 "$RESOURCE|Y$ §Hstockpile§! ($VAL0|2Y$) must NOT be $COMPARE$ $VAL1|2Y$"
  RESOURCE_STOCKPILED_AT_LEAST:1 "$RESOURCE|Y$ §Hstockpile§! ($VAL0|2Y$) must be $COMPARE$ $VAL1|2Y$"
- RESOURCE_INCOME_LESS_THAN:2 "Monthly $RESOURCE|Y$ §Hincome§! ($VAL0|2Y$) must NOT be $COMPARE$ $VAL1|2Y$"
- RESOURCE_INCOME_AT_LEAST:1 "Monthly $RESOURCE|Y$ §Hincome§! ($VAL0|2Y$) must be $COMPARE$ $VAL1|2Y$"
- RESOURCE_REVENUE_TRIGGER:0 "Monthly $RESOURCE|Y$ §Hrevenue§! ($VAL0|2Y$) must be $COMPARE$ $VAL1|2Y$"
- RESOURCE_REVENUE_NOT_TRIGGER:0 "Monthly $RESOURCE|Y$ §Hrevenue§! ($VAL0|2Y$) must NOT be $COMPARE$ $VAL1|2Y$"
- RESOURCE_EXPENSES_TRIGGER:0 "Monthly $RESOURCE|Y$ §Hexpenses§! ($VAL0|2Y$) must be $COMPARE$ $VAL1|2Y$"
- RESOURCE_EXPENSES_NOT_TRIGGER:0 "Monthly $RESOURCE|Y$ §Hexpenses§! ($VAL0|2Y$) must NOT be $COMPARE$ $VAL1|2Y$"
+ RESOURCE_INCOME_LESS_THAN:2 "§Hรายได้§! $RESOURCE|Y$ ต่อเดือน ($VAL0|2Y$) ต้องไม่ $COMPARE$ $VAL1|2Y$"
+ RESOURCE_INCOME_AT_LEAST:1 "§Hรายได้§! $RESOURCE|Y$ ต่อเดือน ($VAL0|2Y$) ต้อง $COMPARE$ $VAL1|2Y$"
+ RESOURCE_REVENUE_TRIGGER:0 "§Hรายได้ (ยังไม่หักค่าใช้จ่ายส่วนอื่นๆ)§! $RESOURCE|Y$ ต่อเดือน ($VAL0|2Y$) ต้อง $COMPARE$ $VAL1|2Y$"
+ RESOURCE_REVENUE_NOT_TRIGGER:0 "§Hรายได้ (ยังไม่หักค่าใช้จ่ายส่วนอื่นๆ)§! $RESOURCE|Y$ ต่อเดือน ($VAL0|2Y$) ต้องไม่ $COMPARE$ $VAL1|2Y$"
+ RESOURCE_EXPENSES_TRIGGER:0 "§Hรายจ่าย§! $RESOURCE|Y$ ต่อเดือน ($VAL0|2Y$) ต้อง $COMPARE$ $VAL1|2Y$"
+ RESOURCE_EXPENSES_NOT_TRIGGER:0 "§Hรายจ่าย§! $RESOURCE|Y$ ต่อเดือน ($VAL0|2Y$) ต้องไม่ $COMPARE$ $VAL1|2Y$"
  ATTACKER_WAR_EXHAUSTION_LESS_THAN:1 "ผู้โจมตี ความอิดโรยจากสงคราม $VAL0|2Y$ $COMPARE$ $VAL1|2Y$"
  ATTACKER_WAR_EXHAUSTION_AT_LEAST:1 "ผู้โจมตี ความอิดโรยจากสงคราม $VAL0|2Y$ $COMPARE$ $VAL1|2Y$"
  DEFENDER_WAR_EXHAUSTION_LESS_THAN:1 "ผู้ปกป้อง ความอิดโรยจากสงคราม $VAL0|2Y$ $COMPARE$ $VAL1|2Y$"
@@ -1485,8 +1485,8 @@
  SET_PLAYER_EFFECT:0 "$OLD|Y$ will switch to playing $NEW|Y$"
  TRIGGER_POP_CAN_REPRODUCE:0 "Pop can reproduce"
  TRIGGER_POP_CANNOT_REPRODUCE:0 "Pop can NOT reproduce"
- TRIGGER_POP_MAINTENANCE_COST_NOT:2 "Pop $RESOURCE$ Upkeep Cost ($VAL0|2Y$) NOT $COMPARE$ $VAL1|2Y$"
- TRIGGER_POP_MAINTENANCE_COST:2 "Pop $RESOURCE$ Upkeep Cost ($VAL0|2Y$) $COMPARE$ $VAL1|2Y$"
+ TRIGGER_POP_MAINTENANCE_COST_NOT:2 "$RESOURCE$ ที่เป็นค่าบำรุงรักษาประชากร ($VAL0|2Y$) ไม่$COMPARE$ $VAL1|2Y$"
+ TRIGGER_POP_MAINTENANCE_COST:2 "$RESOURCE$ ที่เป็นค่าบำรุงรักษาประชากร ($VAL0|2Y$) $COMPARE$ $VAL1|2Y$"
  count_tile_trigger:0 "Number of tiles $IS_NOT$ $COMPARATOR$ $NUM|Y$"
  TRIGGER_NOT_POPS_HAVE_HAPPINESS:0 "ไม่มีความสุข"
  TRIGGER_POPS_HAVE_HAPPINESS:0 "มีความสุข"
@@ -1642,10 +1642,10 @@
  TRADE_INTERCEPTED_VALUE_AT_LEAST:0 "Intercepted £trade_value£$VAL0|2Y$ at least $COMPARE$ £trade_value£$VAL1|2Y$"
  TRADE_INTERCEPTED_RATIO_LESS_THAN:0 "Intercepted £trade_value£$VAL0|%Y$ less than $COMPARE$ £trade_value£$VAL1|%Y$"
  TRADE_INTERCEPTED_RATIO_AT_LEAST:0 "Intercepted £trade_value£$VAL0|%Y$ at least $COMPARE$ £trade_value£$VAL1|%Y$"
- TRADE_PROTECTED_VALUE_LESS_THAN:0 "Protected £trade_value£$VAL0|2Y$ less than $COMPARE$ £trade_value£$VAL1|2Y$"
- TRADE_PROTECTED_VALUE_AT_LEAST:0 "Protected £trade_value£$VAL0|2Y$ at least $COMPARE$ £trade_value£$VAL1|2Y$"
- TRADE_PROTECTED_RATIO_LESS_THAN:0 "Protected £trade_value£$VAL0|%0Y$ less than $COMPARE$ £trade_value£$VAL1|%0Y$"
- TRADE_PROTECTED_RATIO_AT_LEAST:0 "Protected £trade_value£$VAL0|%0Y$ at least $COMPARE$ £trade_value£$VAL1|%0Y$"
+ TRADE_PROTECTED_VALUE_LESS_THAN:0 "£trade_value£$VAL0|2Y$ ได้รับการปกป้อง น้อยกว่า $COMPARE$ £trade_value£$VAL1|2Y$"
+ TRADE_PROTECTED_VALUE_AT_LEAST:0 "£trade_value£$VAL0|2Y$ ได้รับการปกป้อง อย่างน้อย $COMPARE$ £trade_value£$VAL1|2Y$"
+ TRADE_PROTECTED_RATIO_LESS_THAN:0 "£trade_value£$VAL0|%0Y$ ได้รับการปกป้อง น้อยกว่า $COMPARE$ £trade_value£$VAL1|%0Y$"
+ TRADE_PROTECTED_RATIO_AT_LEAST:0 "£trade_value£$VAL0|%0Y$ ได้รับการปกป้อง อย่างน้อย $COMPARE$ £trade_value£$VAL1|%0Y$"
  NUM_TRADE_ROTES_LESS_THAN:0 "จำนวนเส้นทางการค้าน้อยกว่า $COMPARE$ £trade_value£$VAL1|0Y$"
  NUM_TRADE_ROTES_AT_LEAST:0 "จำนวนเส้นทางการค้ามีอย่างน้อย $COMPARE$ £trade_value£$VAL1|0Y$"
  HAS_CURRENT_FIRST_CONTACT_STAGE:0 "Current stage is $STAGE|Y$"
@@ -1880,8 +1880,8 @@
  COMPLETE_CRISIS_OBJECTIVE:3 "The $OBJ|Y$ crisis objective is completed, granting $REWARD|G$ Menace."
  COMPLETE_CRISIS_OBJECTIVE_FAIL: "The chosen crisis path $PATHY$ doesn't contain the crisis objective $OBJ|Y$. No Menace was rewarded."
  DEACTIVATE_MENACE_PERK:0 "The Menace Perk $PERK$ was deactivated for $COUNTRY$"
- ACTIVATE_CRISIS_PROGRESSION:1 "Allows the $COUNTRY$ to progress toward §YBecoming the §RCrisis§!§!."
- ACTIVATE_CRISIS_PROGRESSION_NO_COUNTRY: "Allows you to progress towards §YBecoming the §RCrisis§!§!."
+ ACTIVATE_CRISIS_PROGRESSION:1 "ทำให้ $COUNTRY$ สามารถก้าวไปสู่การ §Yเป็น §Rไครซิส§!§!"
+ ACTIVATE_CRISIS_PROGRESSION_NO_COUNTRY: "ทำให้คุณสามารถก้าวไปสู่การ §Yเป็น §Rไครซิส§!§!"
  CREATE_NEBULA_EFFECT:0 "เนบิวลาถูกสร้างขึ้นในระบบดาว $SYSTEM|Y$"
  ADD_VICTORY_SCORE_EFFECT:0 "$VALUE$ is added to the Victory Score of $COUNTRY|Y$"
  HAS_CRISIS_LEVEL_TRIGGER:0 "Has Crisis Level: $LEVEL|Y$"
