--- a/mod/thmod/localisation/english/utopia_l_english.yml
+++ b/mod/thmod/localisation/english/utopia_l_english.yml
@@ -179,11 +179,11 @@
  trait_cyborg_streamlined_protocols_desc:0 "§LExtensively batched AI processes allow these units to scale greatly with minimal loss of efficiency.§!"
  trait_cyborg_high_bandwidth:0 "High Bandwidth"
  trait_cyborg_high_bandwidth_desc:0 "§LIndividual units send and receive a vast amount of largely duplicate data, causing exponential lag as the number of units attached to each central processing hub increases.§!"
- trait_cyborg_trading_algorithms:0 "Trading Algorithms"
+ trait_cyborg_trading_algorithms:0 "อัลกอริทึมซื้อขาย"
  trait_cyborg_trading_algorithms_desc:0 "§LPredictive algorithms allow for maximum optimization. Infinitesimal market fluctuations in currency rates, stock availability, and the emotional response of organic partners are accounted for.§!"
  trait_cyborg_power_intensive:0 "Power Intensive"
  trait_cyborg_power_intensive_desc:0 "§LThese cybernetic components require frequent recharging from an external power source.§!"
- TRAIT_POWER_INTENSIVE_EFFECT:0 "Increases $r_energy$ Upkeep by §R+1§!"
+ TRAIT_POWER_INTENSIVE_EFFECT:0 "เพิ่มค่าบำรุงรักษา $r_energy$ §R+1§!"
  CYBORG_ENERGY_UPKEEP_EFFECT:0 "เพิ่มค่าบำรุงรักษา $r_energy$ §R+$@cyborg_energy_upkeep$§!"
  trait_psionic:0 "พลังจิต"
  trait_psionic_desc:0 "§LAll members of this species possess powerful psionic abilities. They typically communicate with each other through telepathy.§!\n"
