--- a/mod/thmod/localisation/english/nemesis_content_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_content_l_english.yml
@@ -143,10 +143,10 @@
  menp_star_eater_desc:0 "For far too long has the light shone on our enemies. No longer will they be able to look to the stars for inspiration."
  unlocks_purge:0 "§YPurge§! is unlocked as a Policy option.\n"
  unlocks_armageddon_bombardment:0 "§YArmageddon Bombardment Stance§! is unlocked.\n"
- unlocks_crisis_corvette:0 "§HUnlocks Ship Type:§! $crisis_corvette$\n"
- unlocks_crisis_destroyer:0 "§HUnlocks Ship Type:§! $crisis_destroyer$\n"
- unlocks_crisis_cruiser:0 "§HUnlocks Ship Type:§! $crisis_cruiser$\n"
- unlocks_star_eater:0 "§HUnlocks Ship Type:§! $star_eater$\n"
+ unlocks_crisis_corvette:0 "§Hปลดล็อกยานประเภท:§! $crisis_corvette$\n"
+ unlocks_crisis_destroyer:0 "§Hปลดล็อกยานประเภท:§! $crisis_destroyer$\n"
+ unlocks_crisis_cruiser:0 "§Hปลดล็อกยานประเภท:§! $crisis_cruiser$\n"
+ unlocks_star_eater:0 "§Hปลดล็อกยานประเภท:§! $star_eater$\n"
  menp_objectives:0 "Menace Objectives"
  menp_objectives_desc:0 "Through the disruption of our reality do we ascend to another."
  unlocks_menace_objectives:0 "Allows the accumulation of £menace£ §YMenace§! by completing §HMenace Objectives§!.\n"
@@ -1641,7 +1641,7 @@
  destroyed_stars_score:0 "Star Systems Destroyed: $VALUE$"
  destroyed_galaxy_score:0 "Galaxy Destroyed: $VALUE$"
  resolution_custodian_anti_piracy_modifier_desc:0 "Trade Protection: §G+5§!\nDamage to Pirates and Marauders: §G+20%§!\nMonthly Energy Credits: §R-3%§!"
- resolution_custodian_united_front_modifier_desc:0 "Damage to Endgame Crisis factions: §G+20%§!\nMonthly Energy Credits: §R-3%§!"
+ resolution_custodian_united_front_modifier_desc:0 "สร้างความเสียหายให้กับฝ่ายไครซิสตอนจบเกม: §G+20%§!\nเครดิตพลังงานรายเดือน: §R-3%§!"
  mod_gdf_ship_alloys_cost_mult:1 "[GetGDFOrArmada] Ship Alloy Cost"
  custodian.30.name:0 "The Galactic Defense Force"
  custodian.30.a.desc:0 "$custodian.30.intro$\n\n$custodian.30.nocrisis$"
