--- a/mod/thmod/localisation/english/utopia_ascension_l_english.yml
+++ b/mod/thmod/localisation/english/utopia_ascension_l_english.yml
@@ -27,7 +27,7 @@
  utopia.2558.desc:0 "That yours was a depraved species was not unknown to us, but your latest act of insanity has surpassed even our darkest fears. Making imperfect copies of your brains and plugging them into mobile synthetic containers is not the same as transferring your essence into a new body, for such a thing cannot be done.\n\nYour souls are lost forever. Do you even realize the enormity of your mistake? Destroying the bodies you were gifted with at birth was nothing less than the collective suicide of your entire species. There is truly no hope for you now..."
  utopia.2558.a:0 "Superstitious fools."
  flesh_is_weak_tooltip:2 "สามารถเข้าถึงวัฒนธรรม §Y$tradition_cybernetics$§! ได้\n$UNLOCKS_AGENDA$ $council_agenda_agenda_flesh_is_weak_name$ ซึ่งให้เทคโนโลยีไซเบอร์เนติกให้เป็นทางเลือกในการวิจัยได้"
- synthetic_evolution_tooltip:3 "Gain access to the §Y$tradition_synthetics$§! tradition tree.\n$UNLOCKS_AGENDA$ $council_agenda_agenda_synthetic_evolution_name$, which grants Robotic technologies as Research Options."
+ synthetic_evolution_tooltip:3 "สามารถเข้าถึงวัฒนธรรม §Y$tradition_synthetics$§! ได้\n$UNLOCKS_AGENDA$ $council_agenda_agenda_synthetic_evolution_name$, ซึ่งจะให้เทคโนโลยีหุ่นยนต์เป็นทางเลือกในการวิจัย"
  mind_over_matter_tooltip:1 "สามารถเข้าถึงวัฒนธรรม §Y$tradition_psionics$§! ได้\n$UNLOCKS_AGENDA$ $council_agenda_agenda_mind_over_matter_name$ ซึ่งให้เทคโนโลยีพลังจิตให้เป็นทางเลือกในการวิจัยได้"
  transcendence_tooltip:0 "สมาชิกทุกคนในเผ่าพันธุ์ของเราจะปลดล็อกศักยภาพพลังจิตโดยสมบูรณ์"
  engineered_evolution_tooltip:1 "สามารถเข้าถึงวัฒนธรรม §Y$tradition_genetics$§! ได้\n$UNLOCKS_AGENDA$ $council_agenda_agenda_engineered_evolution_name$ ซึ่งให้เทคโนโลยีพันธุศาสตร์ให้เป็นทางเลือกในการวิจัยได้"
